vn translation creation

--- a/(2017) The Summer Grass Is Getting In My Way/03. Say it.md
+++ b/(2017) The Summer Grass Is Getting In My Way/03. Say it.md
@@ -4,23 +4,23 @@ await dv.view('_script');
 言って。 | Itte.
 #### Lyrics
 
-| Japanese                                                     | Romanji                                                                                                                             | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/13/yorushika-itte/)                                                                 |
-| ------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 言って                                                          | itte                                                                                                                                | Say it                                                                                                                                            |
-| あのね、私実は気付いてるの<br><br>ほら、君がいったこと                              | ano ne, watashi jitsu wa kidzuite’ru no<br><br>hora, kimi ga itta koto                                                              | You see, I’ve actually realized already<br><br>Look, about that thing you said                                                                    |
-| あまり考えたいと思えなくて<br><br>忘れてたんだけど                                | amari kangaetai to omoenakute<br><br>wasurete’ta n’dakedo                                                                           | I didn’t feel like thinking about it too much<br><br>So I had forgotten about it, but                                                             |
-| 盲目的に盲動的に妄想的に生きて<br><br>衝動的な焦燥的な消極的なままじゃ駄目だったんだ               | moumokuteki ni moudouteki ni mousouteki ni ikite<br><br>shoudouteki na shousouteki na shoukyokuteki na mama ja dame datta n’da      | Living blindly, recklessly, delusionally<br><br>Impulsively, impatiently, negatively didn’t do me any good                                        |
-| きっと、人生最後の日を前に思うのだろう<br><br>全部、全部言い足りなくて惜しいけど                 | kitto, jinsei saigo no hi o mae ni omou no darou<br><br>zenbu, zenbu iitarinakute oshii kedo                                        | I’m sure that on the last day of my life, when I think of what’s gone before<br><br>All of it, all of it will be unspeakably precious, but        |
-| あぁ、いつか人生最後の日、君がいないことを<br><br>もっと、もっと、もっと<br><br>もっと、ちゃんと言って  | aa, itsuka jinsei saigo no hi, kimi ga inai koto o<br><br>motto, motto, motto<br><br>motto, chanto itte                             | Ah, on that last day of my life, you won’t be there–<br><br>More, more, more<br><br>Say that more clearly                                         |
-| あのね、空が青いのってどうやって伝えればいいんだろうね<br><br>夜の雲が高いのってどうすれば君もわかるんだろう   | ano ne, sora ga aoi no tte dou yatte tsutaereba ii n’darou ne<br><br>yoru no kumo ga takai no tte dou sureba kimi mo wakaru n’darou | You see, I’m not sure how to tell you that the sky is blue<br><br>Or what I’d have to do to make you understand that the clouds at night are high |
-| 言って                                                          | itte                                                                                                                                | Say it                                                                                                                                            |
-| あのね、私実はわかってるの<br><br>もう君が逝ったこと                               | ano ne, watashi jitsu wa wakatte’ru no<br><br>mou kimi ga itta koto                                                                 | You see, I actually know<br><br>That you’re already gone                                                                                          |
-| あのね、わからず屋って言うんだろうね 忘れたいんだけど                                  | ano ne, wakarazuya tte iu n’darou ne wasuretai n’dakedo                                                                             | You see, you’ll probably just call me obstinate, and I want to forget, but                                                                        |
-| もっとちゃんと言ってよ<br><br>忘れないようメモにしてよ<br><br>明日十時にホームで待ち合わせとかしよう   | motto chanto itte yo<br><br>wasurenai you MEMO ni shite yo<br><br>ashita juuji ni HOOMU de machiawase to ka shiyou                  | Say it more clearly<br><br>Make a note so you don’t forget it<br><br>Let’s meet tomorrow at ten on the train platform, or something like that     |
-| 牡丹は散っても花だ<br><br>夏が去っても追慕は切だ                                 | botan wa chitte mo hana da<br><br>natsu ga satte mo tsuibo wa setsu da                                                              | Even if its petals scatter, a peony is still a flower<br><br>Even if the summer ends, the memories of it are still cherished                      |
-| 口に出して 声に出して<br><br>君が言って                                     | kuchi ni dashite koe ni dashite<br><br>kimi ga itte                                                                                 | Put it into words, give voice to it<br><br>Say it                                                                                                 |
-| そして人生最後の日、君が見えるのなら                                           | soshite jinsei saigo no hi, kimi ga mieru no nara                                                                                   | And then if I could see you on the last day of my life                                                                                            |
-| きっと、人生最後の日も愛をうたうのだろう<br><br>全部、全部無駄じゃなかったって言うから              | kitto, jinsei saigo no hi mo ai o utau no darou<br><br>zenbu, zenbu muda ja nakatta tte iu kara                                     | I’m sure, even on the last day of my life, that I’d sing of love<br><br>Because you’d tell me none of it, none of it was in vain                  |
-| あぁ、いつか人生最後の日、君がいないことがまだ信じられないけど                              | aa, itsuka jinsei saigo no hi, kimi ga inai koto ga mada shinjirarenai kedo                                                         | Ah, I still can’t believe that on the last day of my life, you won’t be here                                                                      |
-| もっと、もっと、もっと、もっと<br><br>もっと、もっと、もっと、君が<br><br>もっと、もっと、もっと、もっと | motto, motto, motto, motto<br><br>motto, motto, motto, kimi ga<br><br>motto, motto, motto, motto                                    | More, more, more, more<br><br>More, more, more, you have to<br><br>More, more, more, more                                                         |
-| もっと、ちゃんと言って                                                  | motto, chanto itte                                                                                                                  | Please, say it more clearly                                                                                                                       |
+| Japanese                                                     | Romanji                                                                                                                             | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/13/yorushika-itte/)                                                                 | [pikapika](https://www.youtube.com/watch?v=5XqEjgq-jDU)                                                                                                        |
+| ------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 言って                                                          | itte                                                                                                                                | Say it                                                                                                                                            | Hãy nói đi                                                                                                                                                     |
+| あのね、私実は気付いてるの<br><br>ほら、君がいったこと                              | ano ne, watashi jitsu wa kidzuite’ru no<br><br>hora, kimi ga itta koto                                                              | You see, I’ve actually realized already<br><br>Look, about that thing you said                                                                    | Cậu biết không, thực ra tớ hiểu được<br><br>Những điều cậu đã nói đó                                                                                           |
+| あまり考えたいと思えなくて<br><br>忘れてたんだけど                                | amari kangaetai to omoenakute<br><br>wasurete’ta n’dakedo                                                                           | I didn’t feel like thinking about it too much<br><br>So I had forgotten about it, but                                                             | Tớ không muốn nghĩ nhiều về nó nên đã quên đi rồi                                                                                                              |
+| 盲目的に盲動的に妄想的に生きて<br><br>衝動的な焦燥的な消極的なままじゃ駄目だったんだ               | moumokuteki ni moudouteki ni mousouteki ni ikite<br><br>shoudouteki na shousouteki na shoukyokuteki na mama ja dame datta n’da      | Living blindly, recklessly, delusionally<br><br>Impulsively, impatiently, negatively didn’t do me any good                                        | Sống một cuộc đời mù quáng, bất cẩn rồi ảo tưởng<br><br>Ngông cuồng, nóng vội và tiêu cực, cứ như vậy mọi thứ đều vô nghĩa                                     |
+| きっと、人生最後の日を前に思うのだろう<br><br>全部、全部言い足りなくて惜しいけど                 | kitto, jinsei saigo no hi o mae ni omou no darou<br><br>zenbu, zenbu iitarinakute oshii kedo                                        | I’m sure that on the last day of my life, when I think of what’s gone before<br><br>All of it, all of it will be unspeakably precious, but        | Chắc chắn tớ sẽ nghĩ trước về ngày cuối cùng của cuộc đời mình<br><br>Và sẽ thật tiếc nếu tớ không thể nói hết ra điều đó<br><br>                              |
+| あぁ、いつか人生最後の日、君がいないことを<br><br>もっと、もっと、もっと<br><br>もっと、ちゃんと言って  | aa, itsuka jinsei saigo no hi, kimi ga inai koto o<br><br>motto, motto, motto<br><br>motto, chanto itte                             | Ah, on that last day of my life, you won’t be there–<br><br>More, more, more<br><br>Say that more clearly                                         | Ah, một ngày nào đó cậu sẽ không còn ở đây vào ngày cuối của cuộc đời tớ nữa<br><br>Nữa đi, nữa đi<br><br>Hãy nói điều đó nữa đi, thật rõ ràng vào             |
+| あのね、空が青いのってどうやって伝えればいいんだろうね<br><br>夜の雲が高いのってどうすれば君もわかるんだろう   | ano ne, sora ga aoi no tte dou yatte tsutaereba ii n’darou ne<br><br>yoru no kumo ga takai no tte dou sureba kimi mo wakaru n’darou | You see, I’m not sure how to tell you that the sky is blue<br><br>Or what I’d have to do to make you understand that the clouds at night are high | Nè cậu, làm sao để tớ có thể nói với cậu<br><br>Về bầu trời trong xanh kia?<br><br>Làm sao để cậu hiểu được rằng<br><br>Những đám mây vào ban đêm cao vời vợi? |
+| 言って                                                          | itte                                                                                                                                | Say it                                                                                                                                            | Hãy nói đi                                                                                                                                                     |
+| あのね、私実はわかってるの<br><br>もう君が逝ったこと                               | ano ne, watashi jitsu wa wakatte’ru no<br><br>mou kimi ga itta koto                                                                 | You see, I actually know<br><br>That you’re already gone                                                                                          | Này cậu, thực ra tớ biết đó<br><br>Rằng cậu đã đi mất rồi                                                                                                      |
+| あのね、わからず屋って言うんだろうね 忘れたいんだけど                                  | ano ne, wakarazuya tte iu n’darou ne wasuretai n’dakedo                                                                             | You see, you’ll probably just call me obstinate, and I want to forget, but                                                                        | Cơ mà nè, tớ lại là đứa rất bướng bỉnh<br><br>Mặc dù tớ muốn quên đi                                                                                           |
+| もっとちゃんと言ってよ<br><br>忘れないようメモにしてよ<br><br>明日十時にホームで待ち合わせとかしよう   | motto chanto itte yo<br><br>wasurenai you MEMO ni shite yo<br><br>ashita juuji ni HOOMU de machiawase to ka shiyou                  | Say it more clearly<br><br>Make a note so you don’t forget it<br><br>Let’s meet tomorrow at ten on the train platform, or something like that     | Hãy nói với tớ nhiều hơn nữa đi!<br><br>Ghi lại để cậu không quên đi!<br><br>Rằng ngày mai chúng ta sẽ gặp nhau ở sảnh tàu lúc 10 giờ ấy!                      |
+| 牡丹は散っても花だ<br><br>夏が去っても追慕は切だ                                 | botan wa chitte mo hana da<br><br>natsu ga satte mo tsuibo wa setsu da                                                              | Even if its petals scatter, a peony is still a flower<br><br>Even if the summer ends, the memories of it are still cherished                      | Hoa mẫu đơn dẫu có rơi rụng thì vẫn là hoa<br><br>Mùa hè qua đi thì nỗi nhớ thương của tớ vẫn da diết                                                          |
+| 口に出して 声に出して<br><br>君が言って                                     | kuchi ni dashite koe ni dashite<br><br>kimi ga itte                                                                                 | Put it into words, give voice to it<br><br>Say it                                                                                                 | Hãy nói ra đi, lên tiếng đi<br><br>Cậu hãy nói đi!                                                                                                             |
+| そして人生最後の日、君が見えるのなら                                           | soshite jinsei saigo no hi, kimi ga mieru no nara                                                                                   | And then if I could see you on the last day of my life                                                                                            | Và nếu như tớ có thể nhìn thấy cậu vào ngày cuối cùng của tớ...                                                                                                |
+| きっと、人生最後の日も愛をうたうのだろう<br><br>全部、全部無駄じゃなかったって言うから              | kitto, jinsei saigo no hi mo ai o utau no darou<br><br>zenbu, zenbu muda ja nakatta tte iu kara                                     | I’m sure, even on the last day of my life, that I’d sing of love<br><br>Because you’d tell me none of it, none of it was in vain                  | Chắc chắn vào ngày đó tớ vẫn sẽ hát vang tình yêu trong tớ<br><br>Bởi vì tất cả đã qua đều không hề phí hoài                                                   |
+| あぁ、いつか人生最後の日、君がいないことがまだ信じられないけど                              | aa, itsuka jinsei saigo no hi, kimi ga inai koto ga mada shinjirarenai kedo                                                         | Ah, I still can’t believe that on the last day of my life, you won’t be here                                                                      | Ah, tớ vẫn không thể tin được rằng cậu sẽ không còn đây vào ngày tớ ra đi nữa                                                                                  |
+| もっと、もっと、もっと、もっと<br><br>もっと、もっと、もっと、君が<br><br>もっと、もっと、もっと、もっと | motto, motto, motto, motto<br><br>motto, motto, motto, kimi ga<br><br>motto, motto, motto, motto                                    | More, more, more, more<br><br>More, more, more, you have to<br><br>More, more, more, more                                                         | Nhưng mà, hãy nói nữa đi, nữa đi<br><br>Nữa đi, nữa đi, là cậu đó<br><br>Nữa đi, nữa đi, nữa đi mà                                                             |
+| もっと、ちゃんと言って                                                  | motto, chanto itte                                                                                                                  | Please, say it more clearly                                                                                                                       | Nói nữa đi, rõ ràng vào!                                                                                                                                       |
