--- a/(2017) The Summer Grass Is Getting In My Way/06. Fireworks Beneath My Shoes.md
+++ b/(2017) The Summer Grass Is Getting In My Way/06. Fireworks Beneath My Shoes.md
@@ -4,24 +4,24 @@ await dv.view('_script');
 靴の花火 | Kutsu no Hanabi
 #### Lyrics
 
-| Japanese                                                              | Romanji                                                                                                                                          | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/19/yorushika-kutsu-no-hanabi/)                                                                                                        |
-| --------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ねぇ ねぇ<br><br>何か言おうにも言葉足らずだ<br><br>空いた口が塞がらないから から                     | nee nee<br><br>nanika iou ni mo kotoba tarazu da<br><br>aita kuchi ga fusagaranai kara kara                                                      | Look, look,<br><br>I don’t have the words to say anything<br><br>Because, because I’ve been left open-mouthed                                                                                       |
-| ねぇ ねぇ<br><br>黙りこくっても言葉要らずだ<br><br>目って物を言うから<br>                       | nee nee<br><br>damarikokutte mo kotoba irazu da<br><br>me tte mono o iu kara                                                                     | Look, look,<br><br>Even if I stay silent, words aren’t necessary<br><br>Because my eyes will speak for me                                                                                           |
-| 忘れていくことは虫が食べ始めた結果だ<br><br>想い出の中じゃいつも笑ってる顔なだけ<br>                      | wasurete iku koto wa mushi ga tabehajimeta kekka da<br><br>omoide no naka ja itsumo waratte’ru kao na dake                                       | Forgetting is a fruit[[#^1]] that bugs have begun to eat<br><br>All that remains in my memory is an always-smiling face                                                                             |
-| 夕暮れた色 空を飛んで<br><br>このまま大気さえ飛び出して<br><br>真下、次第に小さくなってくのは<br><br>君の居た街だ | yuugureta iro sora o tonde<br><br>kono mama taiki sae tobidashite<br><br>mashita, shidai ni chiisaku natte’ku no wa<br><br>kimi no ita machi da  | As I’m flying through the twilight-colored sky,<br><br>Even shooting through the atmosphere,<br><br>Below me, rapidly growing small,<br><br>Is the town where you were                              |
-| 靴の先に花が咲いた<br><br>大きな火の花が咲いた<br><br>心ごと残して征こう、だなんて憶う                   | kutsu no saki ni hana ga saita<br><br>ooki na hi no hana ga saita<br><br>kokorogoto nokoshite yukou, da nante omou                               | Beneath my shoes, flowers bloomed<br><br>Giant flowers of fire bloomed<br><br>“I’ll leave behind everything that’s in my heart,” I think[[#^2]]                                                     |
-| そんな夏が見えた<br>                                                          | sonna natsu ga mieta                                                                                                                             | That’s the kind of summer I could see                                                                                                                                                               |
-| ねぇ ねぇ<br><br>君を知ろうにもどっちつかずだ<br><br>きっと鼻に掛けるから                         | nee nee<br><br>kimi o shirou ni mo docchi tsukazu da<br><br>kitto hana ni kakeru kara                                                            | Look, look,<br><br>Even if I try to get to know you, it’s ambiguous<br><br>Because you’re full of pride                                                                                             |
-| 清々することなんて何にもないけど<br><br>今日も空が綺麗だなぁ                                    | seisei suru koto nante nan ni mo nai kedo<br><br>kyou mo sora ga kirei da naa                                                                    | There’s nothing that can make me feel refreshed<br><br>But the sky is beautiful again today                                                                                                         |
-| 僕の食べた物 全てがきっと生への対価だ<br><br>今更な僕はヨダカにさえもなれやしない<br>                     | boku no tabeta mono subete ga kitto sei e no taika da<br><br>imasara na boku wa YODAKA ni sae mo nare ya shinai                                  | I’m sure that everything I’ve eaten is a compensation paid to life<br><br>I’m too late, and now I can’t even become a nighthawk[[#^3]]                                                              |
-| 朝焼けた色 空を舞って<br><br>何を願うかなんて愚問だ<br><br>大人になって忘れていた<br><br>君を映す目が邪魔だ    | asayaketa iro sora o matte<br><br>nani o negau ka nante gumon da<br><br>otona ni natte wasurete ita<br><br>kimi o utsusu me ga jama da           | Dancing in the dawn-colored sky<br><br>“What do you wish for?” is such a foolish question<br><br>I grew up and forgot about it<br><br>That you’re reflected in my eyes is such a nuisance           |
-| ずっと下で花が鳴った<br><br>大きな火の花が鳴った<br><br>音だけでも泣いてしまう、だなんて憶う                | zutto shita de hana ga natta<br><br>ooki na hi no hana ga natta<br><br>oto dake demo naite shimau, da nante omou                                 | Flowers were always ringing out beneath me<br><br>Giant flowers of fire were ringing out<br><br>“The noise alone makes me cry,” I think                                                             |
-| そんな夏を聞いた                                                              | sonna natsu o kiita                                                                                                                              | That’s the kind of summer I heard                                                                                                                                                                   |
-| ねぇ ねぇ<br><br>空を飛ぼうにも終わり知らずだ<br><br>きっと君を探してしまうから から                   | nee nee<br><br>sora o tobou ni mo owari shirazu da<br><br>kitto kimi o sagashite shimau kara kara                                                | Look, look,<br><br>Even if I fly in the sky, there’s no end to it<br><br>Because I’ll surely end up searching for you                                                                               |
-| 夕暮れた色 空を飛んで<br><br>この星の今さえ抜け出して<br><br>真下、次第に小さくて<br><br>消えたのは君の居た街だ  | yuugureta iro sora o tonde<br><br>kono hoshi no ima sae nukedashite<br><br>mashita, shidai ni chiisakute<br><br>kieta no wa kimi no ita machi da | As I’m flying in the twilight-colored sky,<br><br>Breaking free of even the present of this planet,<br><br>Below me, rapidly growing small<br><br>And then disappearing, is the town where you were |
-| 夏の空に花が咲いた<br><br>大きな火の花が咲いた<br><br>いつまででも泣いていたい、だなんて憶う                | natsu no sora ni hana ga saita<br><br>ooki na hi no hana ga saita<br><br>itsu made demo naite itai, da nante omou                                | In the summer sky, flowers bloomed<br><br>Giant flowers of fire bloomed<br><br>“I want to keep crying forever,” I think                                                                             |
-| そんな夏が消えた                                                              | sonna natsu ga kieta                                                                                                                             | That’s the kind of summer that vanished                                                                                                                                                             |
+| Japanese                                                              | Romanji                                                                                                                                          | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2017/12/19/yorushika-kutsu-no-hanabi/)                                                                                                        | [pikapika](https://www.youtube.com/watch?v=L1MESA82v2s)                                                                                                                                               |
+| --------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ねぇ ねぇ<br><br>何か言おうにも言葉足らずだ<br><br>空いた口が塞がらないから から                     | nee nee<br><br>nanika iou ni mo kotoba tarazu da<br><br>aita kuchi ga fusagaranai kara kara                                                      | Look, look,<br><br>I don’t have the words to say anything<br><br>Because, because I’ve been left open-mouthed                                                                                       | Nè... nè cậu...<br><br>Tớ cứ định nói gì đấy nhưng chẳng biết nói gì cả<br><br>Và thế là miệng tớ cứ ngập ngừng như vậy thôi                                                                          |
+| ねぇ ねぇ<br><br>黙りこくっても言葉要らずだ<br><br>目って物を言うから<br>                       | nee nee<br><br>damarikokutte mo kotoba irazu da<br><br>me tte mono o iu kara                                                                     | Look, look,<br><br>Even if I stay silent, words aren’t necessary<br><br>Because my eyes will speak for me                                                                                           | Cậu này... ừm...<br><br>Dù tớ có im lặng nhưng thực ra không cần nói gì đâu<br><br>Vì đôi mắt này chính là để nói chuyện rồi                                                                          |
+| 忘れていくことは虫が食べ始めた結果だ<br><br>想い出の中じゃいつも笑ってる顔なだけ<br>                      | wasurete iku koto wa mushi ga tabehajimeta kekka da<br><br>omoide no naka ja itsumo waratte’ru kao na dake                                       | Forgetting is a fruit[[#^1]] that bugs have begun to eat<br><br>All that remains in my memory is an always-smiling face                                                                             | Những chuyện tớ quên đi là do lũ bọ gặm nhấm mất<br><br>Thế nên trong ký ức tớ chỉ có khuôn mặt cậu tươi cười mà thôi                                                                                 |
+| 夕暮れた色 空を飛んで<br><br>このまま大気さえ飛び出して<br><br>真下、次第に小さくなってくのは<br><br>君の居た街だ | yuugureta iro sora o tonde<br><br>kono mama taiki sae tobidashite<br><br>mashita, shidai ni chiisaku natte’ku no wa<br><br>kimi no ita machi da  | As I’m flying through the twilight-colored sky,<br><br>Even shooting through the atmosphere,<br><br>Below me, rapidly growing small,<br><br>Is the town where you were                              | Trong sắc chiều hoàng hôn, tớ sẽ bay lên bầu trời<br><br>Cứ vậy bay xuyên qua bầu khí quyển<br><br>Ngay bên dưới là thành phố nơi cậu đã ở đó<br><br>Nó đang dần thu nhỏ lại kìa                      |
+| 靴の先に花が咲いた<br><br>大きな火の花が咲いた<br><br>心ごと残して征こう、だなんて憶う                   | kutsu no saki ni hana ga saita<br><br>ooki na hi no hana ga saita<br><br>kokorogoto nokoshite yukou, da nante omou                               | Beneath my shoes, flowers bloomed<br><br>Giant flowers of fire bloomed<br><br>“I’ll leave behind everything that’s in my heart,” I think[[#^2]]                                                     | Dưới mũi giày tớ pháo hoa đã nở rộ<br><br>Một bông pháo hoa rất to nở rộ<br><br>Tớ sẽ bỏ lại trái tim mình ở đó rồi bay đi                                                                            |
+| そんな夏が見えた<br>                                                          | sonna natsu ga mieta                                                                                                                             | That’s the kind of summer I could see                                                                                                                                                               | Tớ đã thấy một mùa hè như vậy đó                                                                                                                                                                      |
+| ねぇ ねぇ<br><br>君を知ろうにもどっちつかずだ<br><br>きっと鼻に掛けるから                         | nee nee<br><br>kimi o shirou ni mo docchi tsukazu da<br><br>kitto hana ni kakeru kara                                                            | Look, look,<br><br>Even if I try to get to know you, it’s ambiguous<br><br>Because you’re full of pride                                                                                             | Nè... nè cậu<br><br>Tớ định làm quen cậu nhưng cứ chần chừ mãi<br><br>Tớ là một kẻ ngạo mạn                                                                                                           |
+| 清々することなんて何にもないけど<br><br>今日も空が綺麗だなぁ                                    | seisei suru koto nante nan ni mo nai kedo<br><br>kyou mo sora ga kirei da naa                                                                    | There’s nothing that can make me feel refreshed<br><br>But the sky is beautiful again today                                                                                                         | Nên giờ tớ chẳng còn có thể lững thững được nữa<br><br>Hôm nay bầu trời vẫn đẹp quá nhỉ?                                                                                                              |
+| 僕の食べた物 全てがきっと生への対価だ<br><br>今更な僕はヨダカにさえもなれやしない<br>                     | boku no tabeta mono subete ga kitto sei e no taika da<br><br>imasara na boku wa YODAKA ni sae mo nare ya shinai                                  | I’m sure that everything I’ve eaten is a compensation paid to life<br><br>I’m too late, and now I can’t even become a nighthawk[[#^3]]                                                              | Những thứ tớ đã ăn, tất cả đều là cái giá để duy trì sự sống<br><br>Nhưng giờ nhận ra đã quá muộn rồi, tớ không thể trở thành chim diều hâu đêm nữa                                                   |
+| 朝焼けた色 空を舞って<br><br>何を願うかなんて愚問だ<br><br>大人になって忘れていた<br><br>君を映す目が邪魔だ    | asayaketa iro sora o matte<br><br>nani o negau ka nante gumon da<br><br>otona ni natte wasurete ita<br><br>kimi o utsusu me ga jama da           | Dancing in the dawn-colored sky<br><br>“What do you wish for?” is such a foolish question<br><br>I grew up and forgot about it<br><br>That you’re reflected in my eyes is such a nuisance           | Trong sắc đỏ bình minh, tớ nhảy múa trên bầu trời<br><br>Tự hỏi rằng tớ sẽ cầu nguyện điều gì đây<br><br>Lớn lên tớ đã quên mất điều đó rồi<br><br>Đôi mắt phản chiếu hình ảnh cậu thật là phiền phức |
+| ずっと下で花が鳴った<br><br>大きな火の花が鳴った<br><br>音だけでも泣いてしまう、だなんて憶う                | zutto shita de hana ga natta<br><br>ooki na hi no hana ga natta<br><br>oto dake demo naite shimau, da nante omou                                 | Flowers were always ringing out beneath me<br><br>Giant flowers of fire were ringing out<br><br>“The noise alone makes me cry,” I think                                                             | Tít phía dưới một bông hoa đã reo lên<br><br>Một bông hoa rất to đã vang lên<br><br>Chỉ nghe tiếng đó thôi tớ đã bật khóc                                                                             |
+| そんな夏を聞いた                                                              | sonna natsu o kiita                                                                                                                              | That’s the kind of summer I heard                                                                                                                                                                   | Tớ nghe thấy một mùa hè như vậy đấy                                                                                                                                                                   |
+| ねぇ ねぇ<br><br>空を飛ぼうにも終わり知らずだ<br><br>きっと君を探してしまうから から                   | nee nee<br><br>sora o tobou ni mo owari shirazu da<br><br>kitto kimi o sagashite shimau kara kara                                                | Look, look,<br><br>Even if I fly in the sky, there’s no end to it<br><br>Because I’ll surely end up searching for you                                                                               | Nè cậu,<br><br>Tớ bay trên bầu trời, nhưng chẳng biết lúc nào mới là điểm dừng<br><br>Tớ hẳn sẽ lại đi tìm cậu mất thôi                                                                               |
+| 夕暮れた色 空を飛んで<br><br>この星の今さえ抜け出して<br><br>真下、次第に小さくて<br><br>消えたのは君の居た街だ  | yuugureta iro sora o tonde<br><br>kono hoshi no ima sae nukedashite<br><br>mashita, shidai ni chiisakute<br><br>kieta no wa kimi no ita machi da | As I’m flying in the twilight-colored sky,<br><br>Breaking free of even the present of this planet,<br><br>Below me, rapidly growing small<br><br>And then disappearing, is the town where you were | Trong sắc chiều hoàng hôn, tớ sẽ bay lên bầu trời<br><br>Cứ vậy mà đi ra khỏi hành tinh này<br><br>Ngay bên dưới là thành phố nơi cậu đã ở đó<br><br>Nhỏ dần rồi biến mất                             |
+| 夏の空に花が咲いた<br><br>大きな火の花が咲いた<br><br>いつまででも泣いていたい、だなんて憶う                | natsu no sora ni hana ga saita<br><br>ooki na hi no hana ga saita<br><br>itsu made demo naite itai, da nante omou                                | In the summer sky, flowers bloomed<br><br>Giant flowers of fire bloomed<br><br>“I want to keep crying forever,” I think                                                                             | Hoa nở trên bầu trời mùa hạ<br><br>Một bông hoa rất to đã nở rộ<br><br>Tớ chỉ muốn được khóc thật lâu thật lâu                                                                                        |
+| そんな夏が消えた                                                              | sonna natsu ga kieta                                                                                                                             | That’s the kind of summer that vanished                                                                                                                                                             | Một mùa hạ như thế đã biến mất rồi                                                                                                                                                                    |
 ##### Notes
 >“Kekka” (which means something like “outcome” or “result”) has the character for “fruit” in it and can sometimes be translated as “fruit,” but usually in a more figurative sense, such as “the fruits of your labor,” so to refer to it as something bugs can eat is a bit of a play on words. ^1
 
