--- a/(2017) The Summer Grass Is Getting In My Way/07. The Clouds and the Ghost.md
+++ b/(2017) The Summer Grass Is Getting In My Way/07. The Clouds and the Ghost.md
@@ -4,24 +4,24 @@ await dv.view('_script');
 雲と幽霊 | Kumo to Yuurei
 ####  Lyrics
 
-| Japanese                                                      | Romanji                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/02/04/yorushika-kumo-to-yuurei/)                                                                          |
-| ------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 幽霊になった僕は、明日遠くの君を見に行くんだ<br><br>その後はどうしよう<br><br>きっと君には言えない     | yuurei ni natta boku wa, asu tooku no kimi o mi ni yuku n’da<br><br>sono ato wa dou shiyou<br><br>kitto kimi ni wa ienai | I’ve become a ghost, and tomorrow I’ll go to see you, far away where you are<br><br>And then what shall I do?<br><br>I definitely can’t tell you that                |
-| 幽霊になった僕は、夏の終わり方を見に行くんだ<br><br>六畳の地球で　浅い木陰のバス停で                | yuurei ni natta boku wa natsu no owarikata o mi ni yuku n’da<br><br>rokujou no chikyuu de asai kokage no BASUtei de      | I’ve become a ghost, and I’m going to see the way the summer ends<br><br>On this studio-apartment-sized earth[[#^1]], at a bus stop in the pale shadows of the trees |
-| 夜に涼む君の手　誘蛾灯に沿って石を蹴った<br><br>街の薄明かりが揺れている                      | yoru ni suzumu kimi no te yuugatou ni sotte ishi o ketta<br><br>machi no usuakari ga yurete iru                          | You kicked pebbles alongside the light trap [[#^2]] with your hands growing cold in the night air<br><br>The faint lights of the town waver                          |
-| 何も見えなくたって<br><br>何も言わなくたって<br><br>誰も気付かなくたって<br><br>それでもわかるから | nani mo mienakutatte<br><br>nani mo iwanakutatte<br><br>daremo kidzukanakutatte<br><br>sore demo wakaru kara             | Because even without seeing anything,<br><br>Even without saying anything,<br><br>Even without anyone noticing,<br><br>I still know                                  |
-| 君と座って　バス停見上げた空が青いことしかわからずに                                    | kimi to suwatte basutei miageta sora ga aoi koto shika wakarazu ni                                                       | I only know that at the bus stop where I was sitting with you, the sky I looked up at was blue                                                                       |
-| 雲が遠いね　ねぇ<br><br>夜の雲が高いこと、本当不思議だよ                              | kumo ga tooi ne nee<br><br>yoru no kumo ga takai koto, hontou fushigi da yo                                              | The clouds are far away, see? See?<br><br>It really is unbelievable that the clouds at night are so high                                                             |
-| だからさ、もういいんだよ                                                  | dakara sa, mou ii n’da yo                                                                                                | So you see, it’s all right now                                                                                                                                       |
-| 幽霊になった僕は、あの頃の景色を見に行くんだ<br><br>遠い街の海辺　子供のとき見た露店街               | yuurei ni natta boku wa, ano koro no keshiki o mi ni yuku n’da<br><br>tooi machi no umibe kodomo no toki mita rotengai   | I’ve become a ghost, and I’m going to see places from my past<br><br>The beach in a distant town, the shopping stalls I saw as a child                               |
-| 歩き疲れた脚でそこらのベンチでバスを待って<br><br>その後はどうしよう<br><br>何で歩いてたんだろう      | arukitsukareta ashi de sokora no BENCHI de BASU o matte<br><br>sono ato wa dou shiyou<br><br>nande aruite’ta n’darou     | With feet tired from walking, I’ll sit on a bench nearby to wait for the bus<br><br>And then what shall I do?<br><br>Why was I walking?                              |
-| 何も知らなくたって<br><br>何も聞けなくたって<br><br>いつか君が忘れても<br><br>それでも見ているから | nani mo shiranakutatte<br><br>nani mo kikenakutatte<br><br>itsuka kimi ga wasurete mo<br><br>sore demo mite iru kara     | Even if someday you forget<br><br>Without knowing anything<br><br>Without hearing anything<br><br>Even so, I’ll be watching you                                      |
-| 夏の陰に座って　入道雲を眺めるだけでどこか苦しくて<br><br>空が高いよ　ねぇ                     | natsu no kage ni suwatte nyuudougumo o nagameru dake de dokoka kurushikute<br><br>sora ga takai yo nee                   | Just sitting in the summer shadows, staring at the storm clouds, is somehow painful<br><br>The sky is so high                                                        |
-| このままずっと遠くに行けたらいいのにな<br><br>夜しかもう眠れずに                          | kono mama zutto tooku ni iketara ii no ni na<br><br>yoru shika mou nemurezu ni                                           | I wish I could go far away just like this<br><br>Now at night I only sleep                                                                                           |
-| 君と座って　バス停見上げた空が青いことしかわからずに                                    | kimi to suwatte BASUtei miageta sora ga aoi koto shika wakarazu ni                                                       | I only know that at the bus stop where I was sitting with you, the sky I looked up at was blue                                                                       |
-| 雲が遠いね　ねぇ<br><br>夜の雲が高いこと、本当不思議だよ                              | kumo ga tooi ne nee<br><br>yoru no kumo ga takai koto, hontou fushigi da yo                                              | The clouds are far away, see? See?<br><br>It really is unbelievable that the clouds at night are so high                                                             |
-| だからさ、だからさ<br><br>君もさ、もういいんだよ                                  | dakara sa, dakara sa<br><br>kimi mo sa, mou ii n’da yo                                                                   | So you see, so you see<br><br>Even for you, it’s all right now                                                                                                       |
-| 幽霊になった僕は、明日遠くの<br><br>君を見に行くんだ　その後はどうだろう<br><br>きっと君には見えない    | yuurei ni natta boku wa, asu tooku no kimi o mi ni yuku n’da<br><br>sono ato wa dou darou<br><br>kitto kimi ni wa mienai | I’ve become a ghost, and tomorrow I’ll go to see you, far away where you are<br><br>And then I wonder what I’ll do<br><br>You definitely won’t be able to see me     |
+| Japanese                                                      | Romanji                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/02/04/yorushika-kumo-to-yuurei/)                                                                          | [pikapika](https://www.youtube.com/watch?v=Sqc-wSgm4j4)                                                                                                                       |
+| ------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 幽霊になった僕は、明日遠くの君を見に行くんだ<br><br>その後はどうしよう<br><br>きっと君には言えない     | yuurei ni natta boku wa, asu tooku no kimi o mi ni yuku n’da<br><br>sono ato wa dou shiyou<br><br>kitto kimi ni wa ienai | I’ve become a ghost, and tomorrow I’ll go to see you, far away where you are<br><br>And then what shall I do?<br><br>I definitely can’t tell you that                | Tớ đã trở thành một hồn ma rồi<br><br>Ngày mai tớ sẽ đến thăm cậu ở nơi phương xa<br><br>Sau đó thì tớ sẽ làm gì nữa nhỉ?<br><br>Chắc chắn tớ sẽ không nói cho cậu biết đâu   |
+| 幽霊になった僕は、夏の終わり方を見に行くんだ<br><br>六畳の地球で　浅い木陰のバス停で                | yuurei ni natta boku wa natsu no owarikata o mi ni yuku n’da<br><br>rokujou no chikyuu de asai kokage no BASUtei de      | I’ve become a ghost, and I’m going to see the way the summer ends<br><br>On this studio-apartment-sized earth[[#^1]], at a bus stop in the pale shadows of the trees | Tớ đã trở thành một hồn ma rồi<br><br>Tớ sẽ đi ngắm mùa hè đang kết thúc<br><br>Trên của địa cầu bé bằng 6 chiếu<br><br>Hay ở trạm dừng bus nấp dưới tán cây lỡ nhỡ           |
+| 夜に涼む君の手　誘蛾灯に沿って石を蹴った<br><br>街の薄明かりが揺れている                      | yoru ni suzumu kimi no te yuugatou ni sotte ishi o ketta<br><br>machi no usuakari ga yurete iru                          | You kicked pebbles alongside the light trap [[#^2]] with your hands growing cold in the night air<br><br>The faint lights of the town waver                          | Bàn tay cậu lạnh đi trong đêm<br><br>Đá đi những viên đá men theo chiếc đèn dụ côn trùng<br><br>Ánh sáng tờ mờ đang đung đưa trong thị trấn                                   |
+| 何も見えなくたって<br><br>何も言わなくたって<br><br>誰も気付かなくたって<br><br>それでもわかるから | nani mo mienakutatte<br><br>nani mo iwanakutatte<br><br>daremo kidzukanakutatte<br><br>sore demo wakaru kara             | Because even without seeing anything,<br><br>Even without saying anything,<br><br>Even without anyone noticing,<br><br>I still know                                  | Cho dù tớ không nhìn thấy gì hết<br><br>Hay cũng không nói được lời nào<br><br>Dù không có ai nhận ra sự hiện diện của tớ<br><br>Nhưng tớ vẫn biết hết đó                     |
+| 君と座って　バス停見上げた空が青いことしかわからずに                                    | kimi to suwatte basutei miageta sora ga aoi koto shika wakarazu ni                                                       | I only know that at the bus stop where I was sitting with you, the sky I looked up at was blue                                                                       | Lúc tớ ngồi cùng cậu<br><br>Tớ chỉ biết rằng bầu trời mà chúng ta ngắm nhìn tại trạm bus thật trong xanh                                                                      |
+| 雲が遠いね　ねぇ<br><br>夜の雲が高いこと、本当不思議だよ                              | kumo ga tooi ne nee<br><br>yoru no kumo ga takai koto, hontou fushigi da yo                                              | The clouds are far away, see? See?<br><br>It really is unbelievable that the clouds at night are so high                                                             | Những đám mây thật xa xôi quá nhỉ<br><br>Lạ thật đấy<br><br>Những đám mây buổi đêm lại cao đến vậy                                                                            |
+| だからさ、もういいんだよ                                                  | dakara sa, mou ii n’da yo                                                                                                | So you see, it’s all right now                                                                                                                                       | Vậy nên là, mọi chuyện đã ổn cả rồi                                                                                                                                           |
+| 幽霊になった僕は、あの頃の景色を見に行くんだ<br><br>遠い街の海辺　子供のとき見た露店街               | yuurei ni natta boku wa, ano koro no keshiki o mi ni yuku n’da<br><br>tooi machi no umibe kodomo no toki mita rotengai   | I’ve become a ghost, and I’m going to see places from my past<br><br>The beach in a distant town, the shopping stalls I saw as a child                               | Tớ đã trở thành một hồn ma rồi<br><br>Tớ sẽ đi ngắm cảnh sắc dạo ấy<br><br>Ở bờ biển phía xa xa thị trấn<br><br>Hay khu phố bán hàng vỉa hè chúng ta hay xem hồi bé           |
+| 歩き疲れた脚でそこらのベンチでバスを待って<br><br>その後はどうしよう<br><br>何で歩いてたんだろう      | arukitsukareta ashi de sokora no BENCHI de BASU o matte<br><br>sono ato wa dou shiyou<br><br>nande aruite’ta n’darou     | With feet tired from walking, I’ll sit on a bench nearby to wait for the bus<br><br>And then what shall I do?<br><br>Why was I walking?                              | Đôi chân tớ đi mãi đã mỏi mệt rồi<br><br>Tớ sẽ ngồi đợi bus ở chiếc ghế dài đằng kia<br><br>Sau đó thì tớ nên làm gì nữa nhỉ?<br><br>Tại sao tớ lại cứ mãi đi như vậy cơ chứ? |
+| 何も知らなくたって<br><br>何も聞けなくたって<br><br>いつか君が忘れても<br><br>それでも見ているから | nani mo shiranakutatte<br><br>nani mo kikenakutatte<br><br>itsuka kimi ga wasurete mo<br><br>sore demo mite iru kara     | Even if someday you forget<br><br>Without knowing anything<br><br>Without hearing anything<br><br>Even so, I’ll be watching you                                      | Cho dù tớ không biết gì cả<br><br>Hay là không thể nghe được gì hết<br><br>Một ngày nào đó có thể cậu sẽ quên tớ<br><br>Dù thế nhưng tớ vẫn đang dõi theo cậu đó              |
+| 夏の陰に座って　入道雲を眺めるだけでどこか苦しくて<br><br>空が高いよ　ねぇ                     | natsu no kage ni suwatte nyuudougumo o nagameru dake de dokoka kurushikute<br><br>sora ga takai yo nee                   | Just sitting in the summer shadows, staring at the storm clouds, is somehow painful<br><br>The sky is so high                                                        | Chỉ riêng việc ngồi dưới bóng râm của mùa hè<br><br>Và ngắm nhìn những cột mây lớn cũng khiến tớ thấy chợt buồn đâu đó<br><br>Bầu trời thật cao quá đi, cậu thấy không?       |
+| このままずっと遠くに行けたらいいのにな<br><br>夜しかもう眠れずに                          | kono mama zutto tooku ni iketara ii no ni na<br><br>yoru shika mou nemurezu ni                                           | I wish I could go far away just like this<br><br>Now at night I only sleep                                                                                           | Giá mà cứ đi thật xa thế này thì cũng tốt nhỉ?<br><br>Tớ sẽ chỉ ngủ vào ban đêm thôi                                                                                          |
+| 君と座って　バス停見上げた空が青いことしかわからずに                                    | kimi to suwatte BASUtei miageta sora ga aoi koto shika wakarazu ni                                                       | I only know that at the bus stop where I was sitting with you, the sky I looked up at was blue                                                                       | Lúc tớ ngồi cùng cậu<br><br>Tớ chỉ biết rằng bầu trời mà chúng ta ngắm nhìn tại trạm bus thật trong xanh                                                                      |
+| 雲が遠いね　ねぇ<br><br>夜の雲が高いこと、本当不思議だよ                              | kumo ga tooi ne nee<br><br>yoru no kumo ga takai koto, hontou fushigi da yo                                              | The clouds are far away, see? See?<br><br>It really is unbelievable that the clouds at night are so high                                                             | Những đám mây thật xa xôi quá nhỉ<br><br>Lạ thật đấy<br><br>Những đám mây buổi đêm lại cao đến vậy                                                                            |
+| だからさ、だからさ<br><br>君もさ、もういいんだよ                                  | dakara sa, dakara sa<br><br>kimi mo sa, mou ii n’da yo                                                                   | So you see, so you see<br><br>Even for you, it’s all right now                                                                                                       | Vậy nên là...<br><br>Vậy nên là<br><br>Cả cậu nữa, mọi chuyện đều ổn cả rồi                                                                                                   |
+| 幽霊になった僕は、明日遠くの<br><br>君を見に行くんだ　その後はどうだろう<br><br>きっと君には見えない    | yuurei ni natta boku wa, asu tooku no kimi o mi ni yuku n’da<br><br>sono ato wa dou darou<br><br>kitto kimi ni wa mienai | I’ve become a ghost, and tomorrow I’ll go to see you, far away where you are<br><br>And then I wonder what I’ll do<br><br>You definitely won’t be able to see me     | Tớ đã trở thành một hồn ma rồi<br><br>Ngày mai tớ sẽ đi thăm cậu ở nơi phương xa<br><br>Sau đó thì sẽ thế nào nhỉ?<br><br>Chắc chắn cậu sẽ không thể thấy tớ đâu              |
 ##### Notes
 >Literally “six-tatami-mat-sized earth”–the number of tatami mats it takes or would take to cover the floor is an alternate measure of room/apartment size in Japan, used in apartment listings and such in place of the area in meters. ^1
 
