--- a/(2018) A Loser Doesn’t Need An Encore/04. Hitchcock.md
+++ b/(2018) A Loser Doesn’t Need An Encore/04. Hitchcock.md
@@ -4,21 +4,21 @@ await dv.view('_script');
 ヒッチコック | Hitchcock
 #### Lyrics
 
-| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/15/yorushika-hitchcock/)                                                                                                                                                                                                                          |
-| -------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 雨の匂いに懐かしくなるのは何でなんでしょうか。<br><br>夏が近づくと胸が騒めくのは何でなんでしょうか。<br><br>人に笑われたら涙が出るのは何でなんでしょうか。<br><br>それでもいつか報われるからと思えばいいんでしょうか。」               | “Ame no nioi ni natsukashiku naru no wa nande na n’deshou ka.<br><br>Natsu ga chikadzuku to mune ga zawameku no wa nande na n’deshou ka.<br><br>Hito ni warawaretara namida ga deru no wa nande na n’deshou ka.<br><br>Soredemo itsuka mukuwareru kara to omoeba ii n’deshou ka.”      | “Why does the scent of the rain make me feel nostalgic?<br><br>Why does my heart clamor as summer approaches?<br><br>Why do I cry when people laugh at me?<br><br>Is it all right to think that even so I’ll be rewarded someday?”                                                                              |
-| さよならって言葉でこんなに胸を裂いて<br><br>今もたった数瞬の夕焼けに足が止まっていた                                                                                         | sayonara tte kotoba de konna ni mune o saite<br><br>ima mo tatta suushun no yuuyake ni ashi ga tomatte ita                                                                                                                                                                             | With the word “goodbye” tearing so much at my chest,<br><br>I was standing still for just a few moments at sunset                                                                                                                                                                                               |
-| 「先生、人生相談です。<br><br>この先どうなら楽ですか。<br><br>そんなの誰もわかりはしないよなんて言われますか。<br><br>ほら、苦しさなんて欲しいわけない。<br><br>何もしないで生きていたい。<br><br>青空だけが見たいのは我儘ですか。」 | “Sensei, jinsei soudan desu.<br><br>Kono saki dou nara raku desu ka.<br><br>Sonna no daremo wakari wa shinai yo nante iwaremasu ka.<br><br>Hora, kurushisa nante hoshii wake nai.<br><br>Nani mo shinaide ikite itai.<br><br>Aozora dake ga mitai no wa wagamama desu ka.”             | “Teacher, I want to talk about my life.<br><br>What should I do from now on?<br><br>Are you just going to tell me ‘no one knows that’ or something?<br><br>Look, it’s not that I want to suffer.<br><br>I just want to live without doing anything.<br><br>Is it selfish to just want to look at the blue sky?” |
-| 「胸が痛んでも嘘がつけるのは何でなんでしょうか。<br><br>悪い人ばかりが得をしてるのは何でなんでしょうか。<br><br>幸せの文字が￥を含むのは何でなんでしょうか。<br><br>一つ線を抜けば辛さになるのはわざとなんでしょうか。」               | “Mune ga itande mo uso ga tsukeru no wa nande na n’deshou ka.<br><br>Warui hito bakari ga toku o shite’ru no wa nande na n’deshou ka.<br><br>Shiawase no moji ga okane o fukumu no wa nande na n’deshou ka.<br><br>Hitotsu sen o nukeba tsurasa ni naru no wa waza to na n’deshou ka.” | “Why do I lie even though it makes my heart ache?<br><br>Why do only bad people prosper?<br><br>Why is it that the character for ‘happiness’ includes the ￥ sign?<br><br>Is it on purpose that leaving out a single stroke turns it into the character for ‘pain’?”                                             |
-| 青春って値札が背中に貼られていて<br><br>ヒッチコックみたいなサスペンスをどこか期待していた                                                                                      | seishun tte nefuda ga senaka ni hararete ite<br><br>HICCHIKOKKU mitai na SASUPENSU o dokoka kitai shite ita                                                                                                                                                                            | With a price sticker saying “youth” stuck to my back<br><br>I was hoping in some way for Hitchcock-like suspense                                                                                                                                                                                                |
-| 「先生、どうでもいいんですよ。<br><br>生きてるだけで痛いんですよ。<br><br>ニーチェもフロイトもこの穴の埋め方は書かないんだ。                                                                 | “Sensei, dou demo ii n’desu yo.<br><br>Ikite’ru dake de itai n’desu yo.<br><br>NIICHE mo FUROITO mo kono ana no umekata wa kakanai n’da.                                                                                                                                               | “Teacher, I don’t care.<br><br>Just going on living causes me pain.<br><br>Neither Nietzche nor Freud wrote about how to fill this hole.                                                                                                                                                                        |
-| ただ夏の匂いに目を瞑って、<br><br>雲の高さを指で描こう。<br><br>想い出だけが見たいのは我儘ですか。」                                                                             | Tada natsu no nioi ni me o tsumutte,<br><br>kumo no takasa o yubi de kakou.<br><br>Omoide dake ga mitai no wa wagamama desu ka.”                                                                                                                                                       | I just want to close my eyes in the scent of summer,<br><br>And sketch out the height of the clouds with my fingers.<br><br>Is it selfish to just want to relive memories?”                                                                                                                                     |
-| 「ドラマチックに人が死ぬストーリーって売れるじゃないですか。<br><br>花の散り際にすら値が付くのも嫌になりました。                                                                           | “DORAMACHIKKU ni hito ga shinu SUTORII tte ureru ja nai desu ka.<br><br>Hana no chirigiwa ni sura ne ga tsuku no mo iya ni narimashita.                                                                                                                                                | “A story where people die dramatically will sell, won’t it?<br><br>I’ve come to hate that even the moment that a flower’s petals fall has a price on it.                                                                                                                                                        |
-| 先生の夢は何だったんですか。<br><br>大人になると忘れちゃうものなんですか。」                                                                                             | Sensei no yume wa nan datta n’desu ka.<br><br>Otona ni naru to wasurechau mono nan desu ka.”                                                                                                                                                                                           | What was your dream, Teacher?<br><br>Did you forget it when you became an adult?”                                                                                                                                                                                                                               |
-| 「先生、人生相談です。<br><br>この先どうなら楽ですか。<br><br>涙が人を強くするなんて全部詭弁でした。                                                                             | “Sensei, jinsei soudan desu.<br><br>Kono saki dou nara raku desu ka.<br><br>Namida ga hito o tsuyoku suru nante zenbu kiben deshita.                                                                                                                                                   | “Teacher, I want to talk about my life.<br><br>What should I do from now on?<br><br>‘Tears make people stronger’ was nothing but sophism.                                                                                                                                                                       |
-| あぁ、この先どうでもいいわけなくて、現実だけがちらついて、<br><br>夏が遠くて。                                                                                            | Aa, kono saki dou demo ii wake nakute, genjitsu dake ga chiratsuite,<br><br>natsu ga tookute.                                                                                                                                                                                          | Yes, it’s not that I don’t care what happens to me, it’s just that reality is flickering,<br><br>And summer is far away.                                                                                                                                                                                        |
-| これでも本当にいいんですか。<br><br>このまま生きてもいいんですか。<br><br>そんなの君にしかわからないよなんて言われますか。                                                                  | Kore demo hontou ni ii n’desu ka.<br><br>Kono mama ikite mo ii n’desu ka.<br><br>Sonna no kimi ni shika wakaranai yo nante iwaremasu ka.                                                                                                                                               | Is this really all right?<br><br>Can I go on living like this?<br><br>Are you just going to tell me ‘only you can answer that’ or something?                                                                                                                                                                    |
-| ただ夏の匂いに目を瞑りたい。<br><br>いつまでも風に吹かれたい。<br><br>青空だけが見たいのは我儘ですか。」                                                                           | tada natsu no nioi ni me o tsumuritai.<br><br>Itsumademo kaze ni fukaretai.<br><br>Aozora dake ga mitai no wa wagamama desu ka.”                                                                                                                                                       | I just want to close my eyes in the scent of summer.<br><br>I want to feel the wind always.<br><br>Is it selfish to just want to look at the blue sky?”                                                                                                                                                         |
-| あなただけを知りたいのは我儘ですか                                                                                                                      | anata dake o shiritai no wa wagamama desu ka                                                                                                                                                                                                                                           | Is it selfish if I just want to know you?                                                                                                                                                                                                                                                                       |
+| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/15/yorushika-hitchcock/)                                                                                                                                                                                                                          | [pikapika](https://www.youtube.com/watch?v=rj46awYWs64)                                                                                                                                                                                                                                                                                                  |
+| -------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 雨の匂いに懐かしくなるのは何でなんでしょうか。<br><br>夏が近づくと胸が騒めくのは何でなんでしょうか。<br><br>人に笑われたら涙が出るのは何でなんでしょうか。<br><br>それでもいつか報われるからと思えばいいんでしょうか。」               | “Ame no nioi ni natsukashiku naru no wa nande na n’deshou ka.<br><br>Natsu ga chikadzuku to mune ga zawameku no wa nande na n’deshou ka.<br><br>Hito ni warawaretara namida ga deru no wa nande na n’deshou ka.<br><br>Soredemo itsuka mukuwareru kara to omoeba ii n’deshou ka.”      | “Why does the scent of the rain make me feel nostalgic?<br><br>Why does my heart clamor as summer approaches?<br><br>Why do I cry when people laugh at me?<br><br>Is it all right to think that even so I’ll be rewarded someday?”                                                                              | "Tại sao mình lại cảm thấy thật hoài niệm khi ngửi thấy mùi hương của cơn mưa?<br><br>Tại sao con tim mình lại loạn nhịp khi mùa hè đến gần?<br><br>Tại sao mình lại khóc khi người đời cười nhạo mình?<br><br>Có sao không nếu mình vẫn nghĩ một ngày nào đó mình sẽ được công nhận?"                                                                   |
+| さよならって言葉でこんなに胸を裂いて<br><br>今もたった数瞬の夕焼けに足が止まっていた                                                                                         | sayonara tte kotoba de konna ni mune o saite<br><br>ima mo tatta suushun no yuuyake ni ashi ga tomatte ita                                                                                                                                                                             | With the word “goodbye” tearing so much at my chest,<br><br>I was standing still for just a few moments at sunset                                                                                                                                                                                               | Lời tạm biệt lại có thể xé rách trái tim tôi như thế<br><br>Ngày hôm nay bước chân tôi vẫn dừng lại trước vài khoảnh khắc của hoàng hôn                                                                                                                                                                                                                  |
+| 「先生、人生相談です。<br><br>この先どうなら楽ですか。<br><br>そんなの誰もわかりはしないよなんて言われますか。<br><br>ほら、苦しさなんて欲しいわけない。<br><br>何もしないで生きていたい。<br><br>青空だけが見たいのは我儘ですか。」 | “Sensei, jinsei soudan desu.<br><br>Kono saki dou nara raku desu ka.<br><br>Sonna no daremo wakari wa shinai yo nante iwaremasu ka.<br><br>Hora, kurushisa nante hoshii wake nai.<br><br>Nani mo shinaide ikite itai.<br><br>Aozora dake ga mitai no wa wagamama desu ka.”             | “Teacher, I want to talk about my life.<br><br>What should I do from now on?<br><br>Are you just going to tell me ‘no one knows that’ or something?<br><br>Look, it’s not that I want to suffer.<br><br>I just want to live without doing anything.<br><br>Is it selfish to just want to look at the blue sky?” | "Thầy ơi em có chuyện muốn hỏi về cuộc đời<br><br>Sau này em phải làm sao để dễ thở hơn đây?<br><br>Thầy liệu có nói là điều đó không ai biết được câu trả lời không?<br><br>Thầy à, em chỉ không muốn đau khổ nữa mà thôi<br><br>Em chỉ muốn sống mà không phải làm gì cả<br><br>Liệu có phải là ích kỷ không nếu em chỉ muốn ngắm nhìn bầu trời xanh?" |
+| 「胸が痛んでも嘘がつけるのは何でなんでしょうか。<br><br>悪い人ばかりが得をしてるのは何でなんでしょうか。<br><br>幸せの文字が￥を含むのは何でなんでしょうか。<br><br>一つ線を抜けば辛さになるのはわざとなんでしょうか。」               | “Mune ga itande mo uso ga tsukeru no wa nande na n’deshou ka.<br><br>Warui hito bakari ga toku o shite’ru no wa nande na n’deshou ka.<br><br>Shiawase no moji ga okane o fukumu no wa nande na n’deshou ka.<br><br>Hitotsu sen o nukeba tsurasa ni naru no wa waza to na n’deshou ka.” | “Why do I lie even though it makes my heart ache?<br><br>Why do only bad people prosper?<br><br>Why is it that the character for ‘happiness’ includes the ￥ sign?<br><br>Is it on purpose that leaving out a single stroke turns it into the character for ‘pain’?”                                             | "Tại sao mình vẫn có thể nói dối dù con tim đau quặn lại?<br><br>Tại sao những kẻ xấu thì toàn được lợi?<br><br>Tại sao trong chữ 'Hạnh phúc' lại có cả đồng yên vậy?<br><br>Trong khi đó bỏ đi một nét gạch ngang thì lại thành 'đau khổ' là cố tình sao?"                                                                                              |
+| 青春って値札が背中に貼られていて<br><br>ヒッチコックみたいなサスペンスをどこか期待していた                                                                                      | seishun tte nefuda ga senaka ni hararete ite<br><br>HICCHIKOKKU mitai na SASUPENSU o dokoka kitai shite ita                                                                                                                                                                            | With a price sticker saying “youth” stuck to my back<br><br>I was hoping in some way for Hitchcock-like suspense                                                                                                                                                                                                | Có một bảng giá mang tên "thanh xuân" dán vào lưng tôi<br><br>Tôi cứ mải chờ đợi một sự hồi hộp như phim của Hitchcock ở đâu đó                                                                                                                                                                                                                          |
+| 「先生、どうでもいいんですよ。<br><br>生きてるだけで痛いんですよ。<br><br>ニーチェもフロイトもこの穴の埋め方は書かないんだ。                                                                 | “Sensei, dou demo ii n’desu yo.<br><br>Ikite’ru dake de itai n’desu yo.<br><br>NIICHE mo FUROITO mo kono ana no umekata wa kakanai n’da.                                                                                                                                               | “Teacher, I don’t care.<br><br>Just going on living causes me pain.<br><br>Neither Nietzche nor Freud wrote about how to fill this hole.                                                                                                                                                                        | "Thầy ơi, em thấy sao cũng được hết<br><br>Chỉ sống thôi cũng đã đau đớn lắm rồi<br><br>Cả Nietzche và Freud đều không viết về cách lấp đầy lỗ hổng này                                                                                                                                                                                                  |
+| ただ夏の匂いに目を瞑って、<br><br>雲の高さを指で描こう。<br><br>想い出だけが見たいのは我儘ですか。」                                                                             | Tada natsu no nioi ni me o tsumutte,<br><br>kumo no takasa o yubi de kakou.<br><br>Omoide dake ga mitai no wa wagamama desu ka.”                                                                                                                                                       | I just want to close my eyes in the scent of summer,<br><br>And sketch out the height of the clouds with my fingers.<br><br>Is it selfish to just want to relive memories?”                                                                                                                                     | Em sẽ chỉ nhắm mắt lại thưởng thức mùi hương của mùa hè<br><br>Dùng ngón tay sẽ ra sự cao vời vợi của những đám mây<br><br>Em chỉ muốn nhìn về ký ức của mình có phải là ích kỷ lắm không?"                                                                                                                                                              |
+| 「ドラマチックに人が死ぬストーリーって売れるじゃないですか。<br><br>花の散り際にすら値が付くのも嫌になりました。                                                                           | “DORAMACHIKKU ni hito ga shinu SUTORII tte ureru ja nai desu ka.<br><br>Hana no chirigiwa ni sura ne ga tsuku no mo iya ni narimashita.                                                                                                                                                | “A story where people die dramatically will sell, won’t it?<br><br>I’ve come to hate that even the moment that a flower’s petals fall has a price on it.                                                                                                                                                        | "Những câu chuyện người chết nghe như phim chẳng phải bán chạy lắm sao?<br><br>Thời điểm hoa rơi cũng có giá trị của nó làm em ghét lắm                                                                                                                                                                                                                  |
+| 先生の夢は何だったんですか。<br><br>大人になると忘れちゃうものなんですか。」                                                                                             | Sensei no yume wa nan datta n’desu ka.<br><br>Otona ni naru to wasurechau mono nan desu ka.”                                                                                                                                                                                           | What was your dream, Teacher?<br><br>Did you forget it when you became an adult?”                                                                                                                                                                                                                               | Ước mơ của thầy ngày trước là gì vậy?<br><br>Khi lớn lên thầy cũng quên mất nó hay sao?"                                                                                                                                                                                                                                                                 |
+| 「先生、人生相談です。<br><br>この先どうなら楽ですか。<br><br>涙が人を強くするなんて全部詭弁でした。                                                                             | “Sensei, jinsei soudan desu.<br><br>Kono saki dou nara raku desu ka.<br><br>Namida ga hito o tsuyoku suru nante zenbu kiben deshita.                                                                                                                                                   | “Teacher, I want to talk about my life.<br><br>What should I do from now on?<br><br>‘Tears make people stronger’ was nothing but sophism.                                                                                                                                                                       | "Thầy ơi em cần tư vấn<br><br>Cuộc đời em phải làm sao để dễ dàng hơn đây?<br><br>Cái gì mà nước mắt sẽ làm con người mạnh mẽ hơn, toàn là ngụy biện                                                                                                                                                                                                     |
+| あぁ、この先どうでもいいわけなくて、現実だけがちらついて、<br><br>夏が遠くて。                                                                                            | Aa, kono saki dou demo ii wake nakute, genjitsu dake ga chiratsuite,<br><br>natsu ga tookute.                                                                                                                                                                                          | Yes, it’s not that I don’t care what happens to me, it’s just that reality is flickering,<br><br>And summer is far away.                                                                                                                                                                                        | Ôi, cuộc đời này đâu phải thế nào cũng được đâu, chỉ toàn sự thật phơi bày ra<br><br>Mùa hè thì sao xa xôi quá                                                                                                                                                                                                                                           |
+| これでも本当にいいんですか。<br><br>このまま生きてもいいんですか。<br><br>そんなの君にしかわからないよなんて言われますか。                                                                  | Kore demo hontou ni ii n’desu ka.<br><br>Kono mama ikite mo ii n’desu ka.<br><br>Sonna no kimi ni shika wakaranai yo nante iwaremasu ka.                                                                                                                                               | Is this really all right?<br><br>Can I go on living like this?<br><br>Are you just going to tell me ‘only you can answer that’ or something?                                                                                                                                                                    | Em cứ thế này thật sự không sao ư?<br><br>Em cứ sống như này thật sự không vấn đề gì ư?<br><br>Thầy liệu có nói rằng cái này chỉ có em mới biết được không?                                                                                                                                                                                              |
+| ただ夏の匂いに目を瞑りたい。<br><br>いつまでも風に吹かれたい。<br><br>青空だけが見たいのは我儘ですか。」                                                                           | tada natsu no nioi ni me o tsumuritai.<br><br>Itsumademo kaze ni fukaretai.<br><br>Aozora dake ga mitai no wa wagamama desu ka.”                                                                                                                                                       | I just want to close my eyes in the scent of summer.<br><br>I want to feel the wind always.<br><br>Is it selfish to just want to look at the blue sky?”                                                                                                                                                         | Em chỉ muốn nhắm mắt lại trước mùi hương của mùa hè<br><br>Em muốn được cơn gió thổi bay đi mãi mãi<br><br>Liệu có phải ích kỷ quá không khi em chỉ muốn được nhìn trời cao trong xanh?"                                                                                                                                                                 |
+| あなただけを知りたいのは我儘ですか                                                                                                                      | anata dake o shiritai no wa wagamama desu ka                                                                                                                                                                                                                                           | Is it selfish if I just want to know you?                                                                                                                                                                                                                                                                       | Liệu có phải ích kỷ quá không khi tớ chỉ muốn được nhìn cậu?                                                                                                                                                                                                                                                                                             |
 ##### Notes
 >Another translation can be found [here](https://docs.google.com/document/d/1UekNafTls2xzjrtF2aWoOacNL1vx5-vZcSk6HM0lvlo/edit)(by Loafer)
