--- a/(2021) Creation/01. Robbery and Bouquet.md
+++ b/(2021) Creation/01. Robbery and Bouquet.md
@@ -1,17 +1,18 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-強盗と花束 | Goutou to Hanataba
+強盗と花束 | Goutou to Hanataba | Tên trộm và bó hoa
 #### Lyrics
 
-| Japanese                                                                                                                                                     | Romanji                                                                                                                                                                                                                                                                                                                      | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                                                            |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ある朝、僕は気付いたんですが<br><br>思ったよりもソファが狭い<br><br>お金が足りないわけでもないけど<br><br>家具屋は生活圏外<br><br>そうして僕は思ったんですが<br><br>隣の家なら徒歩一分<br><br>何とかなると思った<br><br>僕は包丁を持った             | Aru asa, boku wa kizuitan desu ga<br><br>Omotta yori mo sofa ga semai<br><br>Okane ga tarinai wake de mo nai kedo<br><br>Kaguya wa seikatsu kengai<br><br>Soshite boku wa omottan desu ga<br><br>Tonari no ie nara toho ippun<br><br>Nantoka naru to omotta<br><br>Boku wa hocho o motta                                     | One morning, I realized that<br><br>The sofa I have is smaller than I thought<br><br>It's not like I don't have enough money<br><br>But the furniture store is far from the neighbourhood<br><br>Then, it crossed my mind<br><br>That the house next door is just a one-minute walk away<br><br>Things will work out one way or another, I thought<br><br>And so, I carried a kitchen knife with me                                            |
-| 何にも満たされないなら<br><br>行こう、僕らで全部奪うのさ<br><br>紙みたいな理性なんてほら、飛ばしてしまえ<br><br>神様、本当にこの世の全部が人に優しいんだったら<br><br>少しくらいは僕らにくれたっていいじゃないですか                                   | Nan ni mo mitasarenai nara<br><br>Ikou, bokura de zenbu ubau no sa<br><br>Kami mitaina risei nante hora, tobashite shimae<br><br>Kamisama, honto ni kono yo no zenbu ga hito ni yasashii n dattara<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka                                                             | If we're not fulfilled in the slightest,<br><br>Then let's go snatch everything away<br><br>And look, as for something like a rationality as flimsy as a piece of paper, just blow it away<br><br>Dear god, if every last part of this world is really kind to its people,<br><br>Then it's fine to let us have just a little bit of it, right?                                                                                                |
-| ある昼、僕は思ったんですが<br><br>死にゆく貴方に花を上げたい<br><br>お金が足りないどころか無いから<br><br>花束は予算圏外<br><br>そうして僕は気付いたんですが<br><br>隣の花屋は定休日<br><br>盗めばいいと思った<br><br>僕は信号を待った              | Aru hiru, boku wa omotta n desu ga<br><br>Shiniyuku anata ni hana o agetai<br><br>Okane ga tarinai dokoro ka nai kara<br><br>Hanataba wa yosan kengai<br><br>Soshite boku wa kizuitan desu ga<br><br>Tonari no hanaya wa teikyubi<br><br>Nusumeba ii to omotta<br><br>Boku wa shingo o matta                                 | One afternoon, I thought<br><br>That I'd give you flowers since you're dying<br><br>I don't have enough money, or more like I have none<br><br>So a flower bouquet is out of the budget<br><br>And then I realized that<br><br>The flower shop next door is closed today<br><br>So I thought I'd just have to break in and steal some<br><br>And I waited for the traffic light to turn green                                                  |
-| 笑え、真面目な顔で澄ましてる<br><br>実はあんたもまともじゃないのさ<br><br>金にならない常識なんてもう、忘れてしまえ<br><br>他人の痛みが他人にわかるかよ<br><br>百年経てば誰でも骨だ<br><br>今日くらいは僕らも間違っていいじゃないですか                      | Warae, majimena kao de sumashiteru<br><br>Jitsu wa anta mo matomo janai no sa<br><br>Kane ni naranai joshiki nante mo, wasureteshimae<br><br>Hito no itami ga tanin ni wakaru ka yo<br><br>Hyaku nen tateba dare demo hone da<br><br>Kyo kurai wa bokura mo machigatte ii janai desu ka                                      | Just smile, stop putting on some serious look on your face and trying to act tough<br><br>Because the truth is, you're nowhere near decent, either<br><br>Just forget any common sense that doesn't bring in money already<br><br>Do you really think that one can understand another's pain?<br><br>After 100 years has passed, anyone will be nothing but bones<br><br>So for at least today, it's fine for even us to make mistakes, right? |
-| ある夜、僕はわかったんですが<br><br>これから先には夢が無い<br><br>貴方が居なくなるなんて<br><br>考えたこともなかった<br><br>花屋の主人は優しかった<br><br>けど盗んだことすら咎めない<br><br>強盗と花束に何かの違いがあるのですか<br><br>それ、何かが違うのですか | Aru yoru, boku wa wakattan desu ga<br><br>Korekara saki ni wa yume ga nai<br><br>Anata ga inaku naru nante<br><br>Kangaeta koto mo nakatta<br><br>Hanaya no shujin wa yasashikatta<br><br>Kedo nusunda koto sura togamenai<br><br>Goto to hanataba ni nani ka no chiga no desu ka                                            | One night, I came to understand<br><br>That no dream of any sort lies ahead of me<br><br>I never even once thought<br><br>That you'll be gone<br><br>The owner of the flower shop was kind<br><br>But I didn't even feel guilty for stealing from them<br><br>Is there any difference between a robbery and a flower bouquet?<br><br>What's different between the two?                                                                         |
-| 何にも満たされないなら<br><br>行こう、僕らで全部奪うのさ<br><br>塵みたいな理性なんてほら、飛ばしてしまえ<br><br>神様、本当にこの世の全部が人に優しいんだったら<br><br>少しくらいは僕らにくれたっていいじゃないですか<br><br>少しくらいは僕らを裁いたっていいじゃないですか    | Nan ni mo mitasarenai nara<br><br>Ikou, bokura de zenbu ubau no sa<br><br>Gomi mitaina risei nante hora, tobashiteshimae<br><br>Kamisama, hontoni kono yo no zenbu ga hito ni yasashii n dattara<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka | If we're not fulfilled in the slightest,<br><br>Then let's go snatch everything away<br><br>And look, as for something like a rationality as rubbish as some piece of garbage, just blow it away<br><br>Dear god, if every last part of this world is really kind to its people,<br><br>Then it's fine to let us have just a little bit of it, right?<br><br>It's fine to let us be judged for just a bit, right?                              |
-| ある朝、僕は気付いたんですが<br><br>思ったよりも世界は広い<br><br>努力が足りないわけでもないのに<br><br>何にも実らず圏外<br><br>仕事を辞めて思ったんですが<br><br>安心なんて何処にも無い<br><br>終わった方が未だ増し<br><br>ソファが小さく見えた         | Aru asa, boku wa kizuitan desu ga<br><br>Omotta yori mo sekai wa hiroi<br><br>Doryoku ga tarinai wake de mo nai noni<br><br>Nan ni mo minorazu kengai<br><br>Shigoto o yamete omottan desu ga<br><br>Anshin nante doko ni mo nai<br><br>Owatta ho ga imada mashi<br><br>Sofa ga chiisaku mieta                               | One morning, I realized<br><br>That the world is much bigger than I thought<br><br>Even though my hard work wasn't lacking in the slightest,<br><br>Nothing came out of it, everything was out of reach<br><br>I quit my job and I thought<br><br>That there is no relief anywhere<br><br>It's still better for everything to just end<br><br>The sofa looked small                                                                            |
+| Japanese                                                                                                                                                     | Romanji                                                                                                                                                                                                                                                                                                                      | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                                                            | [pikapika](https://pikapika-translate.blogspot.com/2021/05/sousaku.html)                                                                                                                                                                                                                                                                                            |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ある朝、僕は気付いたんですが<br><br>思ったよりもソファが狭い<br><br>お金が足りないわけでもないけど<br><br>家具屋は生活圏外<br><br>そうして僕は思ったんですが<br><br>隣の家なら徒歩一分<br><br>何とかなると思った<br><br>僕は包丁を持った             | Aru asa, boku wa kizuitan desu ga<br><br>Omotta yori mo sofa ga semai<br><br>Okane ga tarinai wake de mo nai kedo<br><br>Kaguya wa seikatsu kengai<br><br>Soshite boku wa omottan desu ga<br><br>Tonari no ie nara toho ippun<br><br>Nantoka naru to omotta<br><br>Boku wa hocho o motta                                     | One morning, I realized that<br><br>The sofa I have is smaller than I thought<br><br>It's not like I don't have enough money<br><br>But the furniture store is far from the neighbourhood<br><br>Then, it crossed my mind<br><br>That the house next door is just a one-minute walk away<br><br>Things will work out one way or another, I thought<br><br>And so, I carried a kitchen knife with me                                            | Một sáng nọ tôi chợt nhận ra<br><br>Chiếc sopha ở nhà bé hơn tôi nghĩ<br><br>Tiền cũng không phải là thiếu<br><br>Nhưng khu này không có cửa hàng gia dụng<br><br>Và rồi tôi lại nghĩ rằng<br><br>Nhà bên cạnh chỉ tốn một phút đi bộ thôi<br><br>Kiểu gì thì cũng trót lọt thôi<br><br>Và thế là tôi vác dao đi                                                    |
+| 何にも満たされないなら<br><br>行こう、僕らで全部奪うのさ<br><br>紙みたいな理性なんてほら、飛ばしてしまえ<br><br>神様、本当にこの世の全部が人に優しいんだったら<br><br>少しくらいは僕らにくれたっていいじゃないですか                                   | Nan ni mo mitasarenai nara<br><br>Ikou, bokura de zenbu ubau no sa<br><br>Kami mitaina risei nante hora, tobashite shimae<br><br>Kamisama, honto ni kono yo no zenbu ga hito ni yasashii n dattara<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka                                                             | If we're not fulfilled in the slightest,<br><br>Then let's go snatch everything away<br><br>And look, as for something like a rationality as flimsy as a piece of paper, just blow it away<br><br>Dear god, if every last part of this world is really kind to its people,<br><br>Then it's fine to let us have just a little bit of it, right?                                                                                                | Nếu không thể thỏa mãn được<br><br>Vậy thì đi thôi, chúng ta sẽ cướp hết!<br><br>Dăm cái lý trí như đống giấy lộn cho cút hết đi!<br><br>Thần thánh, nếu thật sự tất cả mọi thứ trên đời đều dễ dàng với loài người<br><br>Vậy thì người chia cho tôi một chút thì đã làm sao?                                                                                      |
+| ある昼、僕は思ったんですが<br><br>死にゆく貴方に花を上げたい<br><br>お金が足りないどころか無いから<br><br>花束は予算圏外<br><br>そうして僕は気付いたんですが<br><br>隣の花屋は定休日<br><br>盗めばいいと思った<br><br>僕は信号を待った              | Aru hiru, boku wa omotta n desu ga<br><br>Shiniyuku anata ni hana o agetai<br><br>Okane ga tarinai dokoro ka nai kara<br><br>Hanataba wa yosan kengai<br><br>Soshite boku wa kizuitan desu ga<br><br>Tonari no hanaya wa teikyubi<br><br>Nusumeba ii to omotta<br><br>Boku wa shingo o matta                                 | One afternoon, I thought<br><br>That I'd give you flowers since you're dying<br><br>I don't have enough money, or more like I have none<br><br>So a flower bouquet is out of the budget<br><br>And then I realized that<br><br>The flower shop next door is closed today<br><br>So I thought I'd just have to break in and steal some<br><br>And I waited for the traffic light to turn green                                                  | Một buổi trưa nọ, tôi chợt nghĩ<br><br>Tôi muốn tặng hoa cho em – người đã đi đến thế giới bên kia<br><br>Tiền tôi còn không có chứ đừng nói là thiếu<br><br>Nên mua một bó hoa nằm ngoài khả năng kinh tế<br><br>Và rồi tôi nhận ra rằng<br><br>Cửa hàng hoa bên cạnh hôm nay nghỉ cố định<br><br>Thế thì cứ đi trộm thôi<br><br>Nghĩ vậy và tôi đứng đợi đèn xanh |
+| 笑え、真面目な顔で澄ましてる<br><br>実はあんたもまともじゃないのさ<br><br>金にならない常識なんてもう、忘れてしまえ<br><br>他人の痛みが他人にわかるかよ<br><br>百年経てば誰でも骨だ<br><br>今日くらいは僕らも間違っていいじゃないですか                      | Warae, majimena kao de sumashiteru<br><br>Jitsu wa anta mo matomo janai no sa<br><br>Kane ni naranai joshiki nante mo, wasureteshimae<br><br>Hito no itami ga tanin ni wakaru ka yo<br><br>Hyaku nen tateba dare demo hone da<br><br>Kyo kurai wa bokura mo machigatte ii janai desu ka                                      | Just smile, stop putting on some serious look on your face and trying to act tough<br><br>Because the truth is, you're nowhere near decent, either<br><br>Just forget any common sense that doesn't bring in money already<br><br>Do you really think that one can understand another's pain?<br><br>After 100 years has passed, anyone will be nothing but bones<br><br>So for at least today, it's fine for even us to make mistakes, right? | Cười lên đi cái bọn dửng dưng với vẻ nghiêm túc<br><br>Các người cũng có tử tế được tí gì đâu!<br><br>Mấy cái thường thức không ra tiền quên hết đi!<br><br>Nỗi đau của con người, kẻ khác mà hiểu được sao?<br><br>Trăm năm nữa ai rồi cũng hóa xương<br><br>Nên hôm nay chúng tôi sai thì đã làm sao?                                                             |
+| ある夜、僕はわかったんですが<br><br>これから先には夢が無い<br><br>貴方が居なくなるなんて<br><br>考えたこともなかった<br><br>花屋の主人は優しかった<br><br>けど盗んだことすら咎めない<br><br>強盗と花束に何かの違いがあるのですか<br><br>それ、何かが違うのですか | Aru yoru, boku wa wakattan desu ga<br><br>Korekara saki ni wa yume ga nai<br><br>Anata ga inaku naru nante<br><br>Kangaeta koto mo nakatta<br><br>Hanaya no shujin wa yasashikatta<br><br>Kedo nusunda koto sura togamenai<br><br>Goto to hanataba ni nani ka no chiga no desu ka                                            | One night, I came to understand<br><br>That no dream of any sort lies ahead of me<br><br>I never even once thought<br><br>That you'll be gone<br><br>The owner of the flower shop was kind<br><br>But I didn't even feel guilty for stealing from them<br><br>Is there any difference between a robbery and a flower bouquet?<br><br>What's different between the two?                                                                         | Một tối nọ tôi đã hiểu ra rằng<br><br>Từ giờ trở đi tôi không còn ước mơ nữa<br><br>Ngay cả chuyện em sẽ không còn nữa<br><br>Tôi cũng chưa hề nghĩ đến<br><br>Ông chủ tiệm hoa rất bao dung<br><br>Nhưng ngay cả chuyện tôi ăn trộm ông cũng không trách<br><br>Giữa tên trộm và bó hoa thì có gì khác nhau ư?<br><br>Có gì khác nhau nhau giữa chúng ư?           |
+| 何にも満たされないなら<br><br>行こう、僕らで全部奪うのさ<br><br>塵みたいな理性なんてほら、飛ばしてしまえ<br><br>神様、本当にこの世の全部が人に優しいんだったら<br><br>少しくらいは僕らにくれたっていいじゃないですか<br><br>少しくらいは僕らを裁いたっていいじゃないですか    | Nan ni mo mitasarenai nara<br><br>Ikou, bokura de zenbu ubau no sa<br><br>Gomi mitaina risei nante hora, tobashiteshimae<br><br>Kamisama, hontoni kono yo no zenbu ga hito ni yasashii n dattara<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka<br><br>Sukoshi kurai wa bokura ni kureta tte ii janai desu ka | If we're not fulfilled in the slightest,<br><br>Then let's go snatch everything away<br><br>And look, as for something like a rationality as rubbish as some piece of garbage, just blow it away<br><br>Dear god, if every last part of this world is really kind to its people,<br><br>Then it's fine to let us have just a little bit of it, right?<br><br>It's fine to let us be judged for just a bit, right?                              | Nếu không được thỏa mãn<br><br>Vậy thì đi thôi, chúng ta cướp hết!<br><br>Dăm ba lý trí như rác rưởi cho cút hết đi!<br><br>Thần thánh, nếu thật sự tất cả mọi thứ trên đời đều dễ dàng với loài người<br><br>Vậy thì người chia cho chúng tôi một chút thì đã làm sao?<br><br>Người phán xét chúng tôi một chút thì đã làm sao?                                    |
+| ある朝、僕は気付いたんですが<br><br>思ったよりも世界は広い<br><br>努力が足りないわけでもないのに<br><br>何にも実らず圏外<br><br>仕事を辞めて思ったんですが<br><br>安心なんて何処にも無い<br><br>終わった方が未だ増し<br><br>ソファが小さく見えた         | Aru asa, boku wa kizuitan desu ga<br><br>Omotta yori mo sekai wa hiroi<br><br>Doryoku ga tarinai wake de mo nai noni<br><br>Nan ni mo minorazu kengai<br><br>Shigoto o yamete omottan desu ga<br><br>Anshin nante doko ni mo nai<br><br>Owatta ho ga imada mashi<br><br>Sofa ga chiisaku mieta                               | One morning, I realized<br><br>That the world is much bigger than I thought<br><br>Even though my hard work wasn't lacking in the slightest,<br><br>Nothing came out of it, everything was out of reach<br><br>I quit my job and I thought<br><br>That there is no relief anywhere<br><br>It's still better for everything to just end<br><br>The sofa looked small                                                                            | Một buổi sáng nọ tôi chợt nhận ra<br><br>Rằng thế giới này sao rộng lớn hơn tôi nghĩ<br><br>Cũng chẳng phải là tôi nỗ lực chưa đủ<br><br>Nhưng không có gì nở hoa cả<br><br>Tôi đã bỏ việc và nhận ra<br><br>Sự yên tâm không tồn tại ở đâu cả<br><br>Thà kết thúc hết đi còn tốt hơn<br><br>Nên tôi thấy sopha ở nhà bé lại                                        |
 ##### Notes
->
+>Bài hát này được viết để tả lại cuộc sống của nhạc sĩ sau khi thanh danh đã sụp đổ vì đạo tác. Tuy nhiên trái với mong muốn “được ngắm cảnh ban đêm diễm lệ” thì người nhạc sĩ này vẫn cảm thấy không ổn định, không thoả mãn, không công bằng. Không thể làm được gì cả, chết đi còn tốt hơn. Bế tắc.
+
