--- a/(2021) Creation/04. Eat the Wind.md
+++ b/(2021) Creation/04. Eat the Wind.md
@@ -1,23 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-風を食む | Kaze wo Hamu
+風を食む | Kaze wo Hamu | Nuốt trọn làn gió
 #### Lyrics
 
-| Japanese                                                                                               | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                         |
-| ------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 明日はきっと天気で　悪いことなんてないね<br><br>タイムカードを押して僕は朝、目を開いた<br><br>僕らは今日も買ってる　足りないものしかなくて<br><br>靴を履きながら空想　空は高いのかな | Ashita wa kitto tenki de warui koto nante nai ne<br><br>Taimu ka-do o oshite boku wa asa, me o hiraita<br><br>Bokura wa kyō mo katteru tarinai mono shika nakute<br><br>Kutsu o haki nagara kūsō sora wa takai no ka na       | With tomorrow’s weather, surely nothing could go wrong<br><br>Swiping my time card in the morning, I open my eyes<br><br>We’re buying again today, things we can’t get enough of<br><br>I wonder if the sky is high[[#^1]], a daydream I have while putting on my shoes                            |
-| 貴方さえ　貴方さえ<br><br>これはきっとわからないんだ<br><br>はにかむ顔が散らつく<br><br>口を開けて風を食む                                      | Anata sae anata sae<br><br>Kore wa kitto wakaranai n da<br><br>Hanikamu kao ga chira tsuku<br><br>Kuchi o akete kaze o hamu                                                                                                   | Even you, even you<br><br>Surely don’t understand this<br><br>Your shy face flickers[[#^2]]<br><br>Open your mouth and graze the wind[[#^3]]                                                                                                                                                       |
-| 春が先　花ぐわし<br><br>桜の散りぬるを眺む<br><br>今、風を食む                                                                | Haru ga saki hana guwashi<br><br>Sakura no chirinuru o nagamu<br><br>Ima, kaze o hamu                                                                                                                                         | Spring is ahead, pink blossoms[[#^4]]<br><br>Gazing at the scattering cherry blossoms[[#^5]]<br><br>Now, graze the wind                                                                                                                                                                            |
-| 棚の心は十五円　一つだけ売れ残った<br><br>値引きのシールを貼って閉店時間を待った<br><br>明日もきっと天気で　此処にも客が並んで<br><br>二割引の心は誰かが買うんだろうか        | Tana no kokoro wa jū go en hitotsu dake urenokotta<br><br>Nebiki no shi-ru o hatte heiten jikan o matta<br><br>Ashita mo kitto tenki de koko ni mo kyaku ga narande<br><br>Ni waribiki no kokoro wa dare ka ga kau n darou ka | The heart on the shelf is 15 yen[[#^6]], only one was left unsold<br><br>I put a discount sticker on it and wait for closing hours<br><br>With tomorrow’s weather, customers will line up here too<br><br>I wonder if anyone will buy a heart with a 20% discount                                  |
-| 貴方だけ　貴方だけ<br><br>僕はずっと想ってたんだ<br><br>ただ白いあの雲を待つ<br><br>風のない春に騒めく                                        | Anata dake anata dake<br><br>Boku wa zutto omotteta n da<br><br>Tada shiroi ano kumo o matsu<br><br>Kaze no nai haru ni zawameku                                                                                              | Only you, only you<br><br>Have I always been thinking about<br><br>Waiting for that cloud that’s only white<br><br>Rustling in a spring without wind                                                                                                                                               |
-| 草流れ　天飛ぶや<br><br>軽く花の散るを眺む<br><br>今、風を食む                                                                | Kusa nagare ama tobu ya<br><br>Karuku hana no chiru o nagamu<br><br>Ima, kaze o hamu                                                                                                                                          | Billowing grass, sky soaring[[#^7]]<br><br>Gazing at the lightly falling flowers<br><br>Now, graze the wind                                                                                                                                                                                        |
-| 遂に心は半額　いつまでも売れ残って<br><br>テレビを眺めて空想　ニュースは希望のバーゲン<br><br>貴方は今日も買ってる　足りないものしか無くて<br><br>俯く手元で購入　空は高いのかな   | Tsuini kokoro wa hangaku itsu made mo urenokotte<br><br>Terebi o nagamete kūsō nyu-su wa kibō no ba-gen<br><br>Anata wa kyō mo katteru tarinai mono shika nakute<br><br>Utsumuku temoto de kōnyū sora wa takai no ka na       | At last the heart is half priced, always remaining unsold<br><br>The news is a sale of hope, a daydream I have while staring at the TV<br><br>You’re buying again today, things you can’t have enough of<br><br>Buying it with your pocket money while looking down, you wonder if the sky is high |
-| 貴方だけ　貴方だけ<br><br>この希望をわからないんだ<br><br>売れ残りの心でいい<br><br>僕にとっては美しい                                        | Anata dake anata dake<br><br>Kono kibō o wakaranai n da<br><br>Urenokori no kokoro de ii<br><br>Boku ni totte wa utsukushii                                                                                                   | Only you, only you<br><br>Don’t understand this hope<br><br>I’m fine with an unsold heart<br><br>It’s beautiful to me                                                                                                                                                                              |
-| 春が咲き　花ぐわし<br><br>桜の散りぬるを眺む                                                                             | Haru ga saki hana guwashi<br><br>Sakura no chiri nuru o nagamu                                                                                                                                                                | Spring blooms[[#^8]], pink blossoms<br><br>Gazing at the scattering cherry blossoms                                                                                                                                                                                                                |
-| 貴方しか　貴方しか<br><br>貴方の傷はわからないんだ<br><br>口を開けて歌い出す<br><br>今、貴方は風を食む                                        | Anata shika anata shika<br><br>Anata no kizu wa wakaranai n da<br><br>Kuchi o akete utaidasu<br><br>Ima, anata wa kaze o hamu                                                                                                 | No one but you, no one but you<br><br>Understands your wounds<br><br>Open your mouth and sing out<br><br>Now, you graze the wind                                                                                                                                                                   |
-| 冬籠り　春が先<br><br>貴方の歌だけが聞こえる<br><br>今、口遊む貴方だけ                                                            | Fuyu komori haru ga saki<br><br>Anata no uta dake ga kikoeru<br><br>Ima, kuchizusamu anata dake                                                                                                                               | Hibernation[[#^9]], spring is ahead<br><br>I can hear only your song<br><br>Now, only you humming a tune                                                                                                                                                                                           |
-| 貴方だけ                                                                                                   | Anata dake                                                                                                                                                                                                                    | Only you                                                                                                                                                                                                                                                                                           |
+| Japanese                                                                                               | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                         | [pikapika](https://pikapika-translate.blogspot.com/2021/05/sousaku.html)                                                                                                                                                                                                            |
+| ------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 明日はきっと天気で　悪いことなんてないね<br><br>タイムカードを押して僕は朝、目を開いた<br><br>僕らは今日も買ってる　足りないものしかなくて<br><br>靴を履きながら空想　空は高いのかな | Ashita wa kitto tenki de warui koto nante nai ne<br><br>Taimu ka-do o oshite boku wa asa, me o hiraita<br><br>Bokura wa kyō mo katteru tarinai mono shika nakute<br><br>Kutsu o haki nagara kūsō sora wa takai no ka na       | With tomorrow’s weather, surely nothing could go wrong<br><br>Swiping my time card in the morning, I open my eyes<br><br>We’re buying again today, things we can’t get enough of<br><br>I wonder if the sky is high[[#^1]], a daydream I have while putting on my shoes                            | Ngày mai chắc chắn trời sẽ đẹp thôi, chắc sẽ không có chuyện xui xẻo gì đâu<br><br>Sáng nay chấm công xong tớ mới tỉnh ngủ<br><br>Ngày hôm nay chúng ta vẫn đi mua toàn những món còn thiếu<br><br>Bầu trời chúng ta tưởng tượng ra khi đang buộc dây giày có cao vời vợi không ta? |
+| 貴方さえ　貴方さえ<br><br>これはきっとわからないんだ<br><br>はにかむ顔が散らつく<br><br>口を開けて風を食む                                      | Anata sae anata sae<br><br>Kore wa kitto wakaranai n da<br><br>Hanikamu kao ga chira tsuku<br><br>Kuchi o akete kaze o hamu                                                                                                   | Even you, even you<br><br>Surely don’t understand this<br><br>Your shy face flickers[[#^2]]<br><br>Open your mouth and graze the wind[[#^3]]                                                                                                                                                       | Là cậu, chính cậu đó<br><br>Cậu chắc chắn không thể hiểu được điều này đâu<br><br>Thấp thoáng khuôn mặt cậu thẹn thùng<br><br>Há miệng ra rồi nuột trọn làn gió                                                                                                                     |
+| 春が先　花ぐわし<br><br>桜の散りぬるを眺む<br><br>今、風を食む                                                                | Haru ga saki hana guwashi<br><br>Sakura no chirinuru o nagamu<br><br>Ima, kaze o hamu                                                                                                                                         | Spring is ahead, pink blossoms[[#^4]]<br><br>Gazing at the scattering cherry blossoms[[#^5]]<br><br>Now, graze the wind                                                                                                                                                                            | Tiết chớm xuân, hoa đua nở<br><br>Ngắm nhìn hoa anh đào tung bay<br><br>Giờ đây, câu đang thưởng thức làn gió                                                                                                                                                                       |
+| 棚の心は十五円　一つだけ売れ残った<br><br>値引きのシールを貼って閉店時間を待った<br><br>明日もきっと天気で　此処にも客が並んで<br><br>二割引の心は誰かが買うんだろうか        | Tana no kokoro wa jū go en hitotsu dake urenokotta<br><br>Nebiki no shi-ru o hatte heiten jikan o matta<br><br>Ashita mo kitto tenki de koko ni mo kyaku ga narande<br><br>Ni waribiki no kokoro wa dare ka ga kau n darou ka | The heart on the shelf is 15 yen[[#^6]], only one was left unsold<br><br>I put a discount sticker on it and wait for closing hours<br><br>With tomorrow’s weather, customers will line up here too<br><br>I wonder if anyone will buy a heart with a 20% discount                                  | Trái tim trên kệ giá 15 yên, còn sót lại đúng một trái<br><br>Tớ dán tem giảm giá rồi chờ đóng cửa hàng<br><br>Ngày mai chắc chắn trời vẫn đpej, khách sẽ xếp hàng rất đông<br><br>Liệu trái tim giảm gió 20% có ai chịu mua không?                                                 |
+| 貴方だけ　貴方だけ<br><br>僕はずっと想ってたんだ<br><br>ただ白いあの雲を待つ<br><br>風のない春に騒めく                                        | Anata dake anata dake<br><br>Boku wa zutto omotteta n da<br><br>Tada shiroi ano kumo o matsu<br><br>Kaze no nai haru ni zawameku                                                                                              | Only you, only you<br><br>Have I always been thinking about<br><br>Waiting for that cloud that’s only white<br><br>Rustling in a spring without wind                                                                                                                                               | Là cậu đó, chỉ có cậu mà thôi<br><br>Vì tớ cứ suy nghĩ mãi về cậu mà thôi<br><br>Một người đơn thuần chờ đợi áng mây trắng<br><br>Đùa nghịch trong trời xuân lặng gió                                                                                                               |
+| 草流れ　天飛ぶや<br><br>軽く花の散るを眺む<br><br>今、風を食む                                                                | Kusa nagare ama tobu ya<br><br>Karuku hana no chiru o nagamu<br><br>Ima, kaze o hamu                                                                                                                                          | Billowing grass, sky soaring[[#^7]]<br><br>Gazing at the lightly falling flowers<br><br>Now, graze the wind                                                                                                                                                                                        | Đòng cỏ gợn sóng, cánh chim bay ngang trời<br><br>Nhẹ ngắm hoa khẽ rơi<br><br>Giờ đây, cậu đang thưởng thức làn gió                                                                                                                                                                 |
+| 遂に心は半額　いつまでも売れ残って<br><br>テレビを眺めて空想　ニュースは希望のバーゲン<br><br>貴方は今日も買ってる　足りないものしか無くて<br><br>俯く手元で購入　空は高いのかな   | Tsuini kokoro wa hangaku itsu made mo urenokotte<br><br>Terebi o nagamete kūsō nyu-su wa kibō no ba-gen<br><br>Anata wa kyō mo katteru tarinai mono shika nakute<br><br>Utsumuku temoto de kōnyū sora wa takai no ka na       | At last the heart is half priced, always remaining unsold<br><br>The news is a sale of hope, a daydream I have while staring at the TV<br><br>You’re buying again today, things you can’t have enough of<br><br>Buying it with your pocket money while looking down, you wonder if the sky is high | Cuối cùng trái tim cũng giảm 50%, mãi vẫn không có ai mua<br><br>Tớ nhìn tivi rồi tưởng tượng ra mục tin tức là màn hạ giá đồ cần bán<br><br>Ngày hôm nay cậu vẫn mua toàn những thứ đang thiếu<br><br>Bầu trời chúng ta mua bằng bàn tay úp xuống liệu có cao vời vợi không?       |
+| 貴方だけ　貴方だけ<br><br>この希望をわからないんだ<br><br>売れ残りの心でいい<br><br>僕にとっては美しい                                        | Anata dake anata dake<br><br>Kono kibō o wakaranai n da<br><br>Urenokori no kokoro de ii<br><br>Boku ni totte wa utsukushii                                                                                                   | Only you, only you<br><br>Don’t understand this hope<br><br>I’m fine with an unsold heart<br><br>It’s beautiful to me                                                                                                                                                                              | Là cậu, chỉ cậu mà thôi<br><br>Cậu chẳng hiểu được món đồ này đâu<br><br>Một trái tim bị tồn thì có sao chứ<br><br>Đối với tớ nó vẫn thật đẹp đẽ                                                                                                                                    |
+| 春が咲き　花ぐわし<br><br>桜の散りぬるを眺む                                                                             | Haru ga saki hana guwashi<br><br>Sakura no chiri nuru o nagamu                                                                                                                                                                | Spring blooms[[#^8]], pink blossoms<br><br>Gazing at the scattering cherry blossoms                                                                                                                                                                                                                | Mùa xuân nở rộ, hoa cỏ khoe sắc<br><br>Ngắm nhìn hoa anh đào tung bay                                                                                                                                                                                                               |
+| 貴方しか　貴方しか<br><br>貴方の傷はわからないんだ<br><br>口を開けて歌い出す<br><br>今、貴方は風を食む                                        | Anata shika anata shika<br><br>Anata no kizu wa wakaranai n da<br><br>Kuchi o akete utaidasu<br><br>Ima, anata wa kaze o hamu                                                                                                 | No one but you, no one but you<br><br>Understands your wounds<br><br>Open your mouth and sing out<br><br>Now, you graze the wind                                                                                                                                                                   | Chỉ cậu, chỉ có cậu mà thôi<br><br>Chỉ có cậu mới hiểu được vết thương trong lòng cậu<br><br>Cậu mở miệng cất lên tiếng hát<br><br>Giờ đây cậu đang nuốt trọn làn gió                                                                                                               |
+| 冬籠り　春が先<br><br>貴方の歌だけが聞こえる<br><br>今、口遊む貴方だけ                                                            | Fuyu komori haru ga saki<br><br>Anata no uta dake ga kikoeru<br><br>Ima, kuchizusamu anata dake                                                                                                                               | Hibernation[[#^9]], spring is ahead<br><br>I can hear only your song<br><br>Now, only you humming a tune                                                                                                                                                                                           | Đông qua, xuân đến<br><br>Tớ chỉ còn nghe thấy tiếng hát của cậu mà thôi<br><br>Giờ đây cậu đang huýt sáo, chỉ cậu mà thôi                                                                                                                                                          |
+| 貴方だけ                                                                                                   | Anata dake                                                                                                                                                                                                                    | Only you                                                                                                                                                                                                                                                                                           | Chỉ mình cậu mà thôi                                                                                                                                                                                                                                                                |
 ##### Notes
 >This is wordplay, as the word in Japanese for “high” or “tall” is also used for “expensive”. So it can be “I wonder if the sky is expensive”. ^1
 
