--- a/(2021) Creation/05. Liar.md
+++ b/(2021) Creation/05. Liar.md
@@ -1,24 +1,27 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-嘘月 | Usotsuki [[#^title]]
+嘘月 | Usotsuki [[#^title]] | Ánh trăng dối trá
 #### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                      | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                                   |
-| ------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 雨が降った　花が散った<br><br>ただ染まった　頬を想った<br><br>僕はずっと　バケツいっぱいの月光を飲んでる<br><br>本当なんだ　夜みたいで<br><br>薄く透明な口触りで<br><br>そうなんだって<br><br>笑ってもいいけど             | Ame ga futta hana ga chitta<br><br>Tada somatta hoho wo omotta<br><br>Boku wa zutto baketsu ippai no gekkou wo nonderu<br><br>Hontou nan da yoru mitai de<br><br>Usuku toumei na kuchizawari de<br><br>Sou nan datte<br><br>Warattemo ii kedo                                | Rain fell, flowers scattered<br><br>I thought of just those dyed cheeks<br><br>I've always been drinking[[#^1]] buckets full of moonlight<br><br>It's really true, just like night<br><br>With a pale, transparent taste<br><br>Even though it's fine to smile and say "Yeah, that's right",                 |
-| 僕は君を待っている                                                                                                                                   | Boku wa kimi wo matteiru                                                                                                                                                                                                                                                     | I'm waiting for you                                                                                                                                                                                                                                                                                          |
-| 夏が去った　街は静か<br><br>僕はやっと　部屋に戻って<br><br>夜になった　こんなよい月を一人で見ていてる<br><br>本当なんだ　昔の僕は<br><br>涙が宝石でできてたんだ<br><br>そうなんだって　笑ってもいいけど                    | Natsu ga satta machi wa shizuka<br><br>Boku wa yatto heya ni modotte<br><br>Yoru ni natta konna yoi tsuki wo hitori de miteiteru<br><br>Hontou nan da mukashi no boku wa<br><br>Namida ga houseki de dekitetan da<br><br>Sou nan datte warattemo ii kedo                     | Summer pasted, the town is quiet<br><br>I finally returned to my room<br><br>And it became night<br><br>I am here looking at such a fine moon by myself<br><br>It's really true, in the past my tears were made of gems<br><br>Even though it's fine to smile and say "Yeah, that's right",                  |
-| 声はもう特に忘れた<br><br>思い出も愛も死んだ<br><br>風のない海辺を歩いた　あの夏へ                                                                                           | Koe wa mou tokuni wasureta<br><br>Omoide mo ai mo shinda<br><br>Kaze no nai umibe wo aruita ano natsu e                                                                                                                                                                      | I've already long since forgotten your voice<br><br>Memories and love died<br><br>I walked on the beach without any wind, towards that summer                                                                                                                                                                |
-| 僕はさよならが欲しいんだ<br><br>ただ微睡むような<br><br>もの一つさえ言わないまま<br><br>僕は君を待っている                                                                           | Boku wa sayonara ga hoshiin da<br><br>Tada madoromu you na<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matteiru                                                                                                                                               | I want goodbye<br><br>I feel like I'm just dozing off<br><br>While not being able to say a single thing<br><br>I'm waiting for you                                                                                                                                                                           |
-| 歳を取った　一つ取った<br><br>何も無い部屋で　春になった<br><br>僕は愛を底が抜けた　柄酌で飲んでる<br><br>本当なんだ　味もしなくて<br><br>飲めば飲むほど喉が渇いて<br><br>そうなんだって　笑ってもいいけど                   | Toshi wo totta hitotsu totta<br><br>Nani mo nai heya de haru ni natta<br><br>Boku wa ai wo soko ga nuketa hishaku de nonderu<br><br>Hontou nan da aji mo shinakute<br><br>Nomeba nomu hodo nodo ga kawaite<br><br>Sou nan datte warattemo ii kedo                            | I grew old, grew alone[[#^2]]<br><br>In a room with nothing it became spring<br><br>I'm drinking love in a ladle without its bottom<br><br>It's really true, without even having a taste<br><br>The more I drink the thirstier I get<br><br>And even though it's fine to smile and say "Yeah, that's right", |
-| 僕は夜を待っている                                                                                                                                   | Boku wa yoru wo matteiru                                                                                                                                                                                                                                                     | I'm waiting for the night                                                                                                                                                                                                                                                                                    |
-| 君の鼻歌が欲しいんだ<br><br>ただ微睡むような<br><br>もの一つさえ言わないまま<br><br>僕は君を待っている                                                                             | Kimi no hanauta ga hoshiin da<br><br>Tada madoromu you na<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matteiru                                                                                                                                                | I want your humming<br><br>I feel like I'm just dozing off<br><br>While not being able to say a single thing<br><br>I'm waiting for you                                                                                                                                                                      |
-| 君の目を覚えていない<br><br>君の口を描いていない<br><br>もの一つさえ言わないまま<br><br>僕は君を待っていない<br><br>君の鼻を知っていない<br><br>君の頬を思っていない<br><br>さよならすら言わないまま<br><br>君は夜になって行く | Kimi no me wo oboete inai<br><br>Kimi no kuchi wo egaite inai<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matte inai<br><br>Kimi no hana wo shitte inai<br><br>Kimi no hoho wo omotte inai<br><br>Sayonara sura iwanai mama<br><br>Kimi wa yoru ni natte yuku | I'm not remembering your eyes<br><br>I'm not imagining your mouth<br><br>While not being able to say a single thing<br><br>I'm not waiting for you<br><br>I'm not knowing your nose<br><br>I'm not thinking of your cheeks<br><br>While not even saying goodbye<br><br>You're becoming the night             |
-| (本当なんだ　夜みたいで<br><br>夏が透明な口触りで)                                                                                                              | Hontou nan da yoru mitai de<br><br>Natsu ga toumei na kuchizawari de                                                                                                                                                                                                         | It's really true, just like night<br><br>Summer is transparent to the touch                                                                                                                                                                                                                                  |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                      | [Loafer](https://docs.google.com/document/d/1goQihBrgDgFiW26HE_2T0yRUd9phsJOQBj3E7Zs-3Q0/)                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/2021/05/sousaku.html)                                                                                                                                                                                                                                                                            |
+| ------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 雨が降った　花が散った<br><br>ただ染まった　頬を想った<br><br>僕はずっと　バケツいっぱいの月光を飲んでる<br><br>本当なんだ　夜みたいで<br><br>薄く透明な口触りで<br><br>そうなんだって<br><br>笑ってもいいけど             | Ame ga futta hana ga chitta<br><br>Tada somatta hoho wo omotta<br><br>Boku wa zutto baketsu ippai no gekkou wo nonderu<br><br>Hontou nan da yoru mitai de<br><br>Usuku toumei na kuchizawari de<br><br>Sou nan datte<br><br>Warattemo ii kedo                                | Rain fell, flowers scattered<br><br>I thought of just those dyed cheeks<br><br>I've always been drinking[[#^1]] buckets full of moonlight<br><br>It's really true, just like night<br><br>With a pale, transparent taste<br><br>Even though it's fine to smile and say "Yeah, that's right",                 | Trời đổ mưa rồi, hoa đã tàn rồi<br><br>Còn tôi chỉ nhớ về gò má ửng hồng của em<br><br>Tôi vẫn luôn uống một xô đầy ánh trăng<br><br>Thật đấy, nó cứ như màn đêm<br><br>Vị nhạt trong suốt lan trong miệng<br><br>Em có trêu tôi “Ồ vậy à?” cũng không sao đâu                                                                                      |
+| 僕は君を待っている                                                                                                                                   | Boku wa kimi wo matteiru                                                                                                                                                                                                                                                     | I'm waiting for you                                                                                                                                                                                                                                                                                          | Tôi vẫn đang chờ đợi em đó                                                                                                                                                                                                                                                                                                                          |
+| 夏が去った　街は静か<br><br>僕はやっと　部屋に戻って<br><br>夜になった　こんなよい月を一人で見ていてる<br><br>本当なんだ　昔の僕は<br><br>涙が宝石でできてたんだ<br><br>そうなんだって　笑ってもいいけど                    | Natsu ga satta machi wa shizuka<br><br>Boku wa yatto heya ni modotte<br><br>Yoru ni natta konna yoi tsuki wo hitori de miteiteru<br><br>Hontou nan da mukashi no boku wa<br><br>Namida ga houseki de dekitetan da<br><br>Sou nan datte warattemo ii kedo                     | Summer pasted, the town is quiet<br><br>I finally returned to my room<br><br>And it became night<br><br>I am here looking at such a fine moon by myself<br><br>It's really true, in the past my tears were made of gems<br><br>Even though it's fine to smile and say "Yeah, that's right",                  | Mùa hè qua đi rồi, thành phố trở nên yên ắng<br><br>Cuối cùng tôi cũng quay về phòng<br><br>Màn đêm đã xuống<br><br>Còn tôi thì đang một mình ngắm trăng đẹp vô ngần<br><br>Thật đấy, ngày xưa nước mắt của tôi đã từng làm bằng pha lê<br><br>Em cứ trêu tôi “Ồ vậy à?” đi, cũng không sao mà                                                      |
+| 声はもう特に忘れた<br><br>思い出も愛も死んだ<br><br>風のない海辺を歩いた　あの夏へ                                                                                           | Koe wa mou tokuni wasureta<br><br>Omoide mo ai mo shinda<br><br>Kaze no nai umibe wo aruita ano natsu e                                                                                                                                                                      | I've already long since forgotten your voice<br><br>Memories and love died<br><br>I walked on the beach without any wind, towards that summer                                                                                                                                                                | Vậy nhưng giọng nói của em tôi quên đi từ lâu rồi<br><br>Cả ký ức và tình yêu cũng yên nghỉ rồi<br><br>Yên nghỉ tại mùa hè năm đó khi ta dạo bước bên bãi biển không gió                                                                                                                                                                            |
+| 僕はさよならが欲しいんだ<br><br>ただ微睡むような<br><br>もの一つさえ言わないまま<br><br>僕は君を待っている                                                                           | Boku wa sayonara ga hoshiin da<br><br>Tada madoromu you na<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matteiru                                                                                                                                               | I want goodbye<br><br>I feel like I'm just dozing off<br><br>While not being able to say a single thing<br><br>I'm waiting for you                                                                                                                                                                           | Tôi muốn một lời tạm biệt<br><br>Em chẳng nói một lời nào<br><br>Dù chỉ một lời như giấc mơ thoáng qua<br><br>Còn tôi thì vẫn chờ đợi em                                                                                                                                                                                                            |
+| 歳を取った　一つ取った<br><br>何も無い部屋で　春になった<br><br>僕は愛を底が抜けた　柄酌で飲んでる<br><br>本当なんだ　味もしなくて<br><br>飲めば飲むほど喉が渇いて<br><br>そうなんだって　笑ってもいいけど                   | Toshi wo totta hitotsu totta<br><br>Nani mo nai heya de haru ni natta<br><br>Boku wa ai wo soko ga nuketa hishaku de nonderu<br><br>Hontou nan da aji mo shinakute<br><br>Nomeba nomu hodo nodo ga kawaite<br><br>Sou nan datte warattemo ii kedo                            | I grew old, grew alone[[#^2]]<br><br>In a room with nothing it became spring<br><br>I'm drinking love in a ladle without its bottom<br><br>It's really true, without even having a taste<br><br>The more I drink the thirstier I get<br><br>And even though it's fine to smile and say "Yeah, that's right", | Tôi lại già thêm một tuổi<br><br>Mùa xuân đã đến trong căn phòng trống không<br><br>Tôi uống tình yêu bằng một chiếc gáo thủng đáy<br><br>Thật đó, nó chẳng có vị gì cả<br><br>Càng uống lại càng thấy khát<br><br>Em cứ trêu tôi “Ồ vậy à?” tôi cũng không phiền đâu                                                                               |
+| 僕は夜を待っている                                                                                                                                   | Boku wa yoru wo matteiru                                                                                                                                                                                                                                                     | I'm waiting for the night                                                                                                                                                                                                                                                                                    | Tôi vẫn đang chờ đợi màn đêm xuống                                                                                                                                                                                                                                                                                                                  |
+| 君の鼻歌が欲しいんだ<br><br>ただ微睡むような<br><br>もの一つさえ言わないまま<br><br>僕は君を待っている                                                                             | Kimi no hanauta ga hoshiin da<br><br>Tada madoromu you na<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matteiru                                                                                                                                                | I want your humming<br><br>I feel like I'm just dozing off<br><br>While not being able to say a single thing<br><br>I'm waiting for you                                                                                                                                                                      | Tôi muốn nghe tiếng ngân nga của em<br><br>Em chẳng nói với tôi lời nào<br><br>Dù chỉ một lời thoảng qua như giấc ngủ<br><br>Và tôi vẫn cứ ngồi chờ em                                                                                                                                                                                              |
+| 君の目を覚えていない<br><br>君の口を描いていない<br><br>もの一つさえ言わないまま<br><br>僕は君を待っていない<br><br>君の鼻を知っていない<br><br>君の頬を思っていない<br><br>さよならすら言わないまま<br><br>君は夜になって行く | Kimi no me wo oboete inai<br><br>Kimi no kuchi wo egaite inai<br><br>Mono hitotsu sae iwanai mama<br><br>Boku wa kimi wo matte inai<br><br>Kimi no hana wo shitte inai<br><br>Kimi no hoho wo omotte inai<br><br>Sayonara sura iwanai mama<br><br>Kimi wa yoru ni natte yuku | I'm not remembering your eyes<br><br>I'm not imagining your mouth<br><br>While not being able to say a single thing<br><br>I'm not waiting for you<br><br>I'm not knowing your nose<br><br>I'm not thinking of your cheeks<br><br>While not even saying goodbye<br><br>You're becoming the night             | Tôi không còn nhớ đến đôi mắt em nữa<br><br>Khuôn miệng của em tôi cũng không mường tượng nữa<br><br>Em chẳng nói một lời nào với tôi hết<br><br>Giờ tôi không còn chờ em nữa<br><br>Sống mũi của em, tôi không biết gì hết<br><br>Cũng không còn tương tư gò má của em nữa<br><br>Em không nói một lời nào với tôi<br><br>Cứ thế hóa thành màn đêm |
+| (本当なんだ　夜みたいで<br><br>夏が透明な口触りで)                                                                                                              | Hontou nan da yoru mitai de<br><br>Natsu ga toumei na kuchizawari de                                                                                                                                                                                                         | It's really true, just like night<br><br>Summer is transparent to the touch                                                                                                                                                                                                                                  |                                                                                                                                                                                                                                                                                                                                                     |
 ##### Notes
 >Spoken, the title just means “Liar”. But the kanji it’s written with means “lying moon”. ^title
 
 >he nuance of the kanji used for "drinking" here is "gulping/swallowing", but as that'd sound kind of disgusting in English I just stuck with drinking. ^1
 
 >The same use of hitotsu over hitori that was throughout Hanamotase is used here. ^2
+
+> Sự ra đi của người vợ không để lại một hồi kết, quá đột ngột, “ngay cả việc em sẽ ra đi tôi cũng chưa hề nghĩ tới”. Người nhạc sĩ trải qua 4 mùa vẫn cô đơn, 1 mình ngắm trăng, 1 mình đợi em về để nói một lời tạm biệt, bám víu vào quá khứ để mong sao vẫn giữ lại hình ảnh của em. Thế nhưng thời gian thì tàn khốc, tâm tuy còn đợi nhưng trí nhớ không còn lưu giữ lại được khuôn mặt em nữa. Đến cuối cùng nhạc sĩ vẫn phải chấp nhận sự thật rằng “em đã hoá thành màn đêm” và mình sẽ không bao giờ nghe được lời tạm biệt thoả đáng từ cô ấy.
+> Trong bài này có 3 câu mượn từ thơ của Ozaki Housai. Câu thứ nhất là 僕はずっとバケツ一杯の月光を呑んでる(Tôi đang uống một xô đầy ánh trăng) mượn từ câu thơ バケツ一杯の月光を汲み込んで置く(Nuốt vào một xô đầy ánh trăng). Câu thứ hai là こんな良い月を一人で見てる(Một mình tôi ngắm vầng trăng đẹp vô ngần) mượn từ câu thơ こんな良い月を一人で見て寝る (Một mình tôi ngắm trăng đẹp vô ngần rồi đi ngủ). Câu thứ ba là 僕は愛を、底が抜けた柄杓で呑んでる (Tôi uống tình yêu bằng một chiếc gàu thủng đáy) mượn từ câu thơ 底がぬけた柄杓で水を呑まうとした (uống nước bằng một chiếc gàu thủng đáy).
