--- a/(2023) Magic Lantern/02. Miyakoochi.md
+++ b/(2023) Magic Lantern/02. Miyakoochi.md
@@ -1,20 +1,20 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-都落ち | Miyakoochi
+都落ち | Miyakoochi | Rời khỏi thành thị
 #### Lyrics
 
-| Japanese                                                                 | Romanji                                                                                                                                                       | [zednet](https://docs.google.com/document/d/1WRANLjG6dy45OkDqNxA1_Zyb2c_8SSlKB3OcFwkb4SI/)                                                                                                                                                 |
-| ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 花咲くや　赤ら引く頬に<br><br>さざなみ寄るは海<br><br>貴方は水際一人微笑むだけ<br><br>今、思い出に僕は都落ち       | Hana sakuya akara hiku hoho ni<br><br>Sazanami yoru wa umi<br><br>Anata wa mizugiwa hitori hohoemu dake<br><br>Ima, omoide ni boku wa miyakoochi              | Flowers bloom on your rosy cheeks<br><br>Wavelets rolling make a sea<br><br>On the water’s edge, you alone only smile<br><br>Now, in a memory I leave the capital                                                                          |
-| 鼻歌、綺麗だね<br><br>明日には往くんだぜ<br><br>海猫が鳴いたね<br><br>鳥でも泣くんだね                  | Hanauta, kirei da ne<br><br>Asu ni wa yuku n da ze<br><br>Umineko ga naita ne<br><br>Tori de mo naku n da ne                                                  | The humming sounds nice, doesn’t it?<br><br>I’m leaving tomorrow<br><br>The black-tailed gulls cried out, didn’t they<br><br>And even the other birds are crying                                                                           |
-| 心なし乾いたら別れの時間だぜ<br><br>夏風揉まれて貴方に浅い影                                       | Kokoro nashi kawaitara wakare no jikan da ze<br><br>Natsukaze momarete anata ni asai kage                                                                     | After we’re dried somewhat, it’ll be time to go<br><br>Tossed around by the summer wind, you cast a pale shadow                                                                                                                            |
-| さらり花咲くや　あから引く頬に<br><br>さざなみ、夜は海<br><br>貴方は水際一人手を振るだけ<br><br>今、思い出に僕は都落ち  | Sarari hana saku ya a kara hiku hoho ni<br><br>Sa zanami, yoru wa umi<br><br>Anata wa mizugiwa hitori te o furu dake<br><br>Ima, omoide ni boku wa miyakoochi | Smoothly do flowers bloom on your rosy cheeks<br><br>These wavelets roll into the sea of the night<br><br>On the water’s edge, you alone only wave your hand<br><br>Now, in a memory I leave the capital                                   |
-| 朝焼け、綺麗だね<br><br>舟はもう発つんだぜ<br><br>海猫が鳴いたね<br><br>貴方も泣くんだね                 | Asayake, kirei da ne<br><br>Fune wa mō tatsu n da ze<br><br>Umineko ga naita ne<br><br>Anata mo naku n da ne                                                  | The sunrise looks pretty, doesn’t it?<br><br>The boat’s already set out now<br><br>The black-tailed gulls cried out, didn’t they<br><br>Even you’re crying                                                                                 |
-| 人里離れて鳴る音は向かい波<br><br>飛ぶ鳥は遠くへ明日から向こうまで                                    | Hitozato hanarete naru oto wa mukai nami<br><br>Tobu tori wa tōku e asu kara mukō made                                                                        | Since I drifted away from humanity, all that roars are waves crashing towards me<br><br>A soaring bird flies on far away, from tomorrow to far beyond                                                                                      |
-| 水に落ち流れやがて憂き<br><br>貴方に焦がれる舟は海<br><br>惜しみ書く指は思う丈ばかり<br><br>散る思い出は波か都落ち    | Mizu ni ochi nagare yagate uki<br><br>Anata ni kogareru fune wa umi<br><br>Oshimi gaku yubi wa omou take bakari<br><br>Chiru omoide wa nami ka miyakoochi     | Falling into the water, getting swept away, finally brings some misery<br><br>The sea is a boat that longs for you<br><br>The regret these fingers write are all they have<br><br>Are these scattering memories waves leaving the capital? |
-| 都離れて舟進む<br><br>水は流れて時もまた<br><br>僕は貴方の思い出に<br><br>ただの記憶に                  | Miyako hanarete fune susumu<br><br>Mizu wa nagarete toki mo mata<br><br>Boku wa anata no omoide ni<br><br>Tada no kioku ni                                    | This boat that’s left the capital goes on<br><br>Water and time alike flow along<br><br>I will stay in your memories<br><br>Simply as a memory                                                                                             |
-| 恋ふらくはあから引く頬の<br><br>寄せ消ゆ波の花<br><br>貴方は水際一人微笑むだけ<br><br>今、思い出に僕は          | Koi furaku wa kara hiku hoho no<br><br>Yose kiyu nami no hana<br><br>Anata wa mizugiwa hitori hohoemu dake<br><br>Ima, omoide ni boku wa                      | This love’s the seafoam that ebbs and flows<br><br>From your rosy cheeks<br><br>On the water’s edge, you alone only smile<br><br>Now, in a memory I’ll—                                                                                    |
-| さらり花咲くや　あから引く頬に<br><br>さざなみ、夜は海<br><br>貴方は水際一人手を振るだけ<br><br>今、左様なら　僕は都落ち | Sarari hana saku ya a kara hiku hoho ni<br><br>Sa zanami, yoru wa umi<br><br>Anata wa mizugiwa hitori te o furu dake<br><br>Ima, sayō nara boku wa miyakoochi | Smoothly[?] do flowers bloom on your rosy cheeks<br><br>These wavelets roll into the sea of the night<br><br>On the water’s edge, you alone only wave your hand<br><br>Now, farewell, for I’ll leave the capital                           |
+| Japanese                                                                 | Romanji                                                                                                                                                       | [zednet](https://docs.google.com/document/d/1WRANLjG6dy45OkDqNxA1_Zyb2c_8SSlKB3OcFwkb4SI/)                                                                                                                                                 | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                |
+| ------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 花咲くや　赤ら引く頬に<br><br>さざなみ寄るは海<br><br>貴方は水際一人微笑むだけ<br><br>今、思い出に僕は都落ち       | Hana sakuya akara hiku hoho ni<br><br>Sazanami yoru wa umi<br><br>Anata wa mizugiwa hitori hohoemu dake<br><br>Ima, omoide ni boku wa miyakoochi              | Flowers bloom on your rosy cheeks<br><br>Wavelets rolling make a sea<br><br>On the water’s edge, you alone only smile<br><br>Now, in a memory I leave the capital                                                                          | Hoa đã nở, trôi đôi má ửng đỏ của em<br><br>Biển vỗ từng gợn sóng dịu êm<br><br>Em đứng bên bờ biển mỉm cười một mình<br><br>Còn anh giờ đây rời khỏi tâm trí em trở thành kỷ niệm                                                               |
+| 鼻歌、綺麗だね<br><br>明日には往くんだぜ<br><br>海猫が鳴いたね<br><br>鳥でも泣くんだね                  | Hanauta, kirei da ne<br><br>Asu ni wa yuku n da ze<br><br>Umineko ga naita ne<br><br>Tori de mo naku n da ne                                                  | The humming sounds nice, doesn’t it?<br><br>I’m leaving tomorrow<br><br>The black-tailed gulls cried out, didn’t they<br><br>And even the other birds are crying                                                                           | Tiếng ngân nga thật đẹp làm sao<br><br>Ngày mai nó sẽ không còn ở lại nữa<br><br>Mòng biển kêu lên rồi kìa<br><br>Những chú chim cũng khóc rồi                                                                                                   |
+| 心なし乾いたら別れの時間だぜ<br><br>夏風揉まれて貴方に浅い影                                       | Kokoro nashi kawaitara wakare no jikan da ze<br><br>Natsukaze momarete anata ni asai kage                                                                     | After we’re dried somewhat, it’ll be time to go<br><br>Tossed around by the summer wind, you cast a pale shadow                                                                                                                            | Khi trái tim biến mất, nước mắt đã khô, cũng là lúc tạm biệt<br><br>Gió hạ mang bước chân anh đi, bóng em trở nên mờ nhạt                                                                                                                        |
+| さらり花咲くや　あから引く頬に<br><br>さざなみ、夜は海<br><br>貴方は水際一人手を振るだけ<br><br>今、思い出に僕は都落ち  | Sarari hana saku ya a kara hiku hoho ni<br><br>Sa zanami, yoru wa umi<br><br>Anata wa mizugiwa hitori te o furu dake<br><br>Ima, omoide ni boku wa miyakoochi | Smoothly do flowers bloom on your rosy cheeks<br><br>These wavelets roll into the sea of the night<br><br>On the water’s edge, you alone only wave your hand<br><br>Now, in a memory I leave the capital                                   | Hoa nở phấp phới, trên đôi má ửng đỏ của em<br><br>Từng gợn sóng vỗ, biển đã vào đêm<br><br>Em đứng bên bờ biển vẫy tay một mình<br><br>Còn anh giờ đây rời khỏi tâm trí em trở thành kỷ niệm                                                    |
+| 朝焼け、綺麗だね<br><br>舟はもう発つんだぜ<br><br>海猫が鳴いたね<br><br>貴方も泣くんだね                 | Asayake, kirei da ne<br><br>Fune wa mō tatsu n da ze<br><br>Umineko ga naita ne<br><br>Anata mo naku n da ne                                                  | The sunrise looks pretty, doesn’t it?<br><br>The boat’s already set out now<br><br>The black-tailed gulls cried out, didn’t they<br><br>Even you’re crying                                                                                 | Bình minh đẹp biết mấy<br><br>Thuyền sắp ra khơi rồi<br><br>Mòng biển kêu lên rồi kìa<br><br>Em cũng cất tiếng khóc rồi                                                                                                                          |
+| 人里離れて鳴る音は向かい波<br><br>飛ぶ鳥は遠くへ明日から向こうまで                                    | Hitozato hanarete naru oto wa mukai nami<br><br>Tobu tori wa tōku e asu kara mukō made                                                                        | Since I drifted away from humanity, all that roars are waves crashing towards me<br><br>A soaring bird flies on far away, from tomorrow to far beyond                                                                                      | Nơi đất khách quê người chỉ còn nghe tiếng sóng vang xa<br><br>Cánh chim bay xa, chở theo ngày mai về bờ bên kia                                                                                                                                 |
+| 水に落ち流れやがて憂き<br><br>貴方に焦がれる舟は海<br><br>惜しみ書く指は思う丈ばかり<br><br>散る思い出は波か都落ち    | Mizu ni ochi nagare yagate uki<br><br>Anata ni kogareru fune wa umi<br><br>Oshimi gaku yubi wa omou take bakari<br><br>Chiru omoide wa nami ka miyakoochi     | Falling into the water, getting swept away, finally brings some misery<br><br>The sea is a boat that longs for you<br><br>The regret these fingers write are all they have<br><br>Are these scattering memories waves leaving the capital? | Xuôi theo dòng nước, cuối cùng nỗi đau cũng trỗi dậy<br><br>Biển đã mang đi con thuyền ngóng theo em<br><br>Ngón tay này viết lên nỗi luyến tiếc trải dài theo thương nhớ<br><br>Những kỷ niệm rơi rụng là con sóng hay rời khỏi tâm trí em đây? |
+| 都離れて舟進む<br><br>水は流れて時もまた<br><br>僕は貴方の思い出に<br><br>ただの記憶に                  | Miyako hanarete fune susumu<br><br>Mizu wa nagarete toki mo mata<br><br>Boku wa anata no omoide ni<br><br>Tada no kioku ni                                    | This boat that’s left the capital goes on<br><br>Water and time alike flow along<br><br>I will stay in your memories<br><br>Simply as a memory                                                                                             | Con thuyền rời xa đô thị tiến về phía trước<br><br>Thời gian rồi cũng trôi theo dòng chảy của nước<br><br>Anh sẽ trở thành kỷ niệm trong em<br><br>Chỉ còn là ký ức của em                                                                       |
+| 恋ふらくはあから引く頬の<br><br>寄せ消ゆ波の花<br><br>貴方は水際一人微笑むだけ<br><br>今、思い出に僕は          | Koi furaku wa kara hiku hoho no<br><br>Yose kiyu nami no hana<br><br>Anata wa mizugiwa hitori hohoemu dake<br><br>Ima, omoide ni boku wa                      | This love’s the seafoam that ebbs and flows<br><br>From your rosy cheeks<br><br>On the water’s edge, you alone only smile<br><br>Now, in a memory I’ll—                                                                                    | Niềm thương như bông hoa trôi trên sóng<br><br>Tấp vào rồi biến mất trên đôi má ửng đỏ<br><br>Em đứng bên bờ biển mỉm cười một mình<br><br>Còn anh giờ đây trở thành kỷ niệm...                                                                  |
+| さらり花咲くや　あから引く頬に<br><br>さざなみ、夜は海<br><br>貴方は水際一人手を振るだけ<br><br>今、左様なら　僕は都落ち | Sarari hana saku ya a kara hiku hoho ni<br><br>Sa zanami, yoru wa umi<br><br>Anata wa mizugiwa hitori te o furu dake<br><br>Ima, sayō nara boku wa miyakoochi | Smoothly[?] do flowers bloom on your rosy cheeks<br><br>These wavelets roll into the sea of the night<br><br>On the water’s edge, you alone only wave your hand<br><br>Now, farewell, for I’ll leave the capital                           | Hoa nở phấp phới, trên đôi má ửng đỏ của em<br><br>Từng gợi sóng vỗ, biển đã vào đêm<br><br>Em đứng bên bờ biển vẫy tay một mình<br><br>Xin tạm biệt em, anh phải đi khỏi nơi đây                                                                |
 ##### Notes
 >This song is inspired by the “万葉集 | Collection of Ten Thousand Leaves”, specifically Poem 116, Book 2. You can read more info about it [here](https://en.wikipedia.org/wiki/Man%27y%C5%8Dsh%C5%AB). Source: [here](https://www.thefirsttimes.jp/news/0000264950/). It is also related to the “[Heike Monogatari](https://en.wikipedia.org/wiki/The_Tale_of_the_Heike)” which was an account of the 12th century struggle for control of Japan between the Taira and Minamoto clans.
