--- a/(2018) A Loser Doesn’t Need An Encore/07. Just a Sunny Day for You.md
+++ b/(2018) A Loser Doesn’t Need An Encore/07. Just a Sunny Day for You.md
@@ -4,21 +4,21 @@ await dv.view('_script');
 ただ君に晴れ | Tada Kimi ni Hare
 #### Lyrics
 
-| Japanese                                                                    | Romanji                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/11/yorushika-tada-kimi-ni-hare/)                                                                                                        |
-| --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 夜に浮かんでいた<br><br>海月のような月が爆ぜた<br><br>バス停の背を覗けば<br><br>あの夏の君が頭にいる              | yoru ni ukande ita<br><br>kurage no you na tsuki ga hazeta<br><br>BASUtei no se o nozokeba<br><br>ano natsu no kimi ga atama ni iru                          | The moon that floated in the night like a jellyfish<br><br>Has split open<br><br>When I glance at the back of the bus stop<br><br>You, as you were that summer, are in my head                        |
-| だけ                                                                          | dake                                                                                                                                                         | Only                                                                                                                                                                                                  |
-| 鳥居 乾いた雲 夏の匂いが頬を撫でる<br><br>大人になるまでほら、背伸びしたままで                                | torii kawaita kumo natsu no nioi ga hoho o naderu<br><br>otona ni naru made hora, senobi shita mama de                                                       | Torii gates, dried-out clouds; the scent of summer strokes my cheek<br><br>Until I become an adult, look, I’ll keep standing on tiptoe to make myself taller                                          |
-| 遊び疲れたらバス停裏で空でも見よう<br><br>じきに夏が暮れても<br><br>きっときっと覚えてるから                      | asobitsukaretara BASUtei ura de sora demo miyou<br><br>jiki ni natsu ga kurete mo<br><br>kitto kitto oboete’ru kara                                          | Tired out from playing, behind the bus stop I’ll even look at the sky<br><br>Even if the summer comes to an end soon<br><br>I’ll definitely, definitely remember                                      |
-| 追いつけないまま大人になって<br><br>君のポケットに夜が咲く<br><br>口に出せないなら僕は一人だ<br><br>それでいいからもう諦めてる | oitsukenai mama otona ni natte<br><br>kimi no POKETTO ni yoru ga saku<br><br>kuchi ni dasenai nara boku wa hitori da<br><br>sore de ii kara mou akiramete’ru | Becoming an adult without being able to catch up<br><br>Night blooms in your pocket<br><br>If I can’t put it into words I’ll be alone<br><br>But that’s all right, I’ve already resigned myself to it |
-| だけ                                                                          | dake                                                                                                                                                         | Only                                                                                                                                                                                                  |
-| 夏日 乾いた雲 山桜桃梅 錆びた標識<br><br>記憶の中はいつも夏の匂いがする                                   | natsuhi kawaita kumo yuusuraume sabita hyoushiki<br><br>kioku no naka wa itsumo natsu no nioi ga suru                                                        | A summer day, dried-out clouds, Nanking cherry trees, a rusted stoplight<br><br>In my memories, it always smells like summer                                                                          |
-| 写真なんて紙切れだ<br><br>思い出なんてただの塵だ<br><br>それがわからないから、口を噤んだまま                      | shashin nante kamikire da<br><br>omoide nante tada no gomi da<br><br>sore ga wakaranai kara, kuchi o tsugunda mama                                           | Photographs are just scraps of paper<br><br>And memories are nothing but garbage<br><br>Because I didn’t understand that, I kept my mouth shut                                                        |
-| 絶えず君のいこふ 記憶に夏野の石一つ                                                          | taezu kimi no ikou kioku ni natsuno no ishi hitotsu                                                                                                          | In my memory, you rest forever on the single stone in a summer field[[#^1]]                                                                                                                           |
-| 俯いたまま大人になって<br><br>追いつけない ただ君に晴れ<br><br>口に出せないまま坂を上った<br><br>僕らの影に夜が咲いていく   | utsumuita mama otona ni natte<br><br>oitsukenai tada kimi ni hare<br><br>kuchi ni dasenai mama saka o nobotta<br><br>bokura no kage ni yoru ga saite iku     | Becoming an adult while looking down<br><br>I can’t catch up, it’s just a sunny day for you<br><br>Unable to put things into words, we climbed the hill<br><br>In our shadows, night is blooming      |
-| 俯いたまま大人になった<br><br>君が思うまま手を叩け<br><br>陽の落ちる坂道を上って<br><br>僕らの影は               | utsumuita mama otona ni natta<br><br>kimi ga omou mama te o tatake<br><br>hi no ochiru sakamichi o nobotte<br><br>bokura no kage wa                          | We’ve become adults while looking down<br><br>Clap your hands how you like<br><br>Climbing the road up the hill at sunset<br><br>Our shadows…                                                         |
-| 追いつけないまま大人になって<br><br>君のポケットに夜が咲く<br><br>口に出せなくても僕ら一つだ<br><br>それでいいだろ、もう    | oitsukenai mama otona ni natte<br><br>kimi no POKETTO ni yoru ga saku<br><br>kuchi ni dasenakute mo bokura hitotsu da<br><br>sore de ii daro, mou            | Becoming an adult without being able to catch up<br><br>Night blooms in your pocket<br><br>Even if we can’t put it into words, we are one<br><br>That’s enough, I think                               |
-| 君の想い出を噛み締めてるだけ                                                              | kimi no omoide o kamishimete’ru dake                                                                                                                         | I’m only chewing over memories of you                                                                                                                                                                 |
+| Japanese                                                                    | Romanji                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2018/05/11/yorushika-tada-kimi-ni-hare/)                                                                                                        | [pikapika](https://www.youtube.com/watch?v=5pcHyJBVelI)                                                                                                                                                                |
+| --------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 夜に浮かんでいた<br><br>海月のような月が爆ぜた<br><br>バス停の背を覗けば<br><br>あの夏の君が頭にいる              | yoru ni ukande ita<br><br>kurage no you na tsuki ga hazeta<br><br>BASUtei no se o nozokeba<br><br>ano natsu no kimi ga atama ni iru                          | The moon that floated in the night like a jellyfish<br><br>Has split open<br><br>When I glance at the back of the bus stop<br><br>You, as you were that summer, are in my head                        | Mặt trăng lơ lửng trên bầu trời đêm như con sứa đã vỡ đôi<br><br>Khi tớ nhìn vào bóng lưng ai đó ở trạm buýt<br><br>Hình ảnh cậu của mùa hè năm đó lại hiện về trong tâm trí tớ                                        |
+| だけ                                                                          | dake                                                                                                                                                         | Only                                                                                                                                                                                                  | Chỉ vậy thôi                                                                                                                                                                                                           |
+| 鳥居 乾いた雲 夏の匂いが頬を撫でる<br><br>大人になるまでほら、背伸びしたままで                                | torii kawaita kumo natsu no nioi ga hoho o naderu<br><br>otona ni naru made hora, senobi shita mama de                                                       | Torii gates, dried-out clouds; the scent of summer strokes my cheek<br><br>Until I become an adult, look, I’ll keep standing on tiptoe to make myself taller                                          | Cánh cổng đền, bụm cây khô khốc, hương thơm của mùa hè lướt trên gò má<br><br>Cho đến khi tớ trưởng thành, tớ vẫn sẽ rướn người để cao hơn                                                                             |
+| 遊び疲れたらバス停裏で空でも見よう<br><br>じきに夏が暮れても<br><br>きっときっと覚えてるから                      | asobitsukaretara BASUtei ura de sora demo miyou<br><br>jiki ni natsu ga kurete mo<br><br>kitto kitto oboete’ru kara                                          | Tired out from playing, behind the bus stop I’ll even look at the sky<br><br>Even if the summer comes to an end soon<br><br>I’ll definitely, definitely remember                                      | Nếu chơi mệt rồi thì mình cùng ngồi sau trạm buýt ngắm bầu trời nhé<br><br>Cho dù mùa hè chẳng chốc sắp tàn<br><br>Tớ vẫn sẽ nhớ về điều đó                                                                            |
+| 追いつけないまま大人になって<br><br>君のポケットに夜が咲く<br><br>口に出せないなら僕は一人だ<br><br>それでいいからもう諦めてる | oitsukenai mama otona ni natte<br><br>kimi no POKETTO ni yoru ga saku<br><br>kuchi ni dasenai nara boku wa hitori da<br><br>sore de ii kara mou akiramete’ru | Becoming an adult without being able to catch up<br><br>Night blooms in your pocket<br><br>If I can’t put it into words I’ll be alone<br><br>But that’s all right, I’ve already resigned myself to it | Không thể đuổi kịp cậu mà đã trưởng thành<br><br>Màn đêm nở rộ trong túi áo cậu<br><br>Nếu không thể nói ra, tớ sẽ mãi đơn độc<br><br>Nhưng như vậy cũng không sao, nên tớ đã bỏ cuộc rồi                              |
+| だけ                                                                          | dake                                                                                                                                                         | Only                                                                                                                                                                                                  | Chỉ vậy thôi                                                                                                                                                                                                           |
+| 夏日 乾いた雲 山桜桃梅 錆びた標識<br><br>記憶の中はいつも夏の匂いがする                                   | natsuhi kawaita kumo yuusuraume sabita hyoushiki<br><br>kioku no naka wa itsumo natsu no nioi ga suru                                                        | A summer day, dried-out clouds, Nanking cherry trees, a rusted stoplight<br><br>In my memories, it always smells like summer                                                                          | Một ngày hạ, đám mây khô khốc, hoa anh đào Nam Kinh, biển báo đã gỉ sét<br><br>Trong kí ức của tớ luôn phảng phất mùi hương của mùa hè                                                                                 |
+| 写真なんて紙切れだ<br><br>思い出なんてただの塵だ<br><br>それがわからないから、口を噤んだまま                      | shashin nante kamikire da<br><br>omoide nante tada no gomi da<br><br>sore ga wakaranai kara, kuchi o tsugunda mama                                           | Photographs are just scraps of paper<br><br>And memories are nothing but garbage<br><br>Because I didn’t understand that, I kept my mouth shut                                                        | Những bức ảnh cũng chỉ là giấy lộn<br><br>Kỷ niệm cũng không là gì ngoài rác vứt đi<br><br>Tớ không biết được những điều đó, nên chỉ biết lặng im                                                                      |
+| 絶えず君のいこふ 記憶に夏野の石一つ                                                          | taezu kimi no ikou kioku ni natsuno no ishi hitotsu                                                                                                          | In my memory, you rest forever on the single stone in a summer field[[#^1]]                                                                                                                           | Bất chợt cậu ngồi nghỉ bên tảng đá trên cánh đồng mùa hạ trong ký ức của tớ                                                                                                                                            |
+| 俯いたまま大人になって<br><br>追いつけない ただ君に晴れ<br><br>口に出せないまま坂を上った<br><br>僕らの影に夜が咲いていく   | utsumuita mama otona ni natte<br><br>oitsukenai tada kimi ni hare<br><br>kuchi ni dasenai mama saka o nobotta<br><br>bokura no kage ni yoru ga saite iku     | Becoming an adult while looking down<br><br>I can’t catch up, it’s just a sunny day for you<br><br>Unable to put things into words, we climbed the hill<br><br>In our shadows, night is blooming      | Tớ trưởng thành khi vẫn chỉ cúi gằm mặt xuống<br><br>Đuổi theo cậu không kịp, mặt trời đó chỉ dành riêng cho cậu mà thôi<br><br>Tớ không nói một lời nào và bước lên dốc<br><br>Màn đêm nở rộ trên cái bóng của hai ta |
+| 俯いたまま大人になった<br><br>君が思うまま手を叩け<br><br>陽の落ちる坂道を上って<br><br>僕らの影は               | utsumuita mama otona ni natta<br><br>kimi ga omou mama te o tatake<br><br>hi no ochiru sakamichi o nobotte<br><br>bokura no kage wa                          | We’ve become adults while looking down<br><br>Clap your hands how you like<br><br>Climbing the road up the hill at sunset<br><br>Our shadows…                                                         | Tớ trưởng thành khi vẫn chỉ cúi gằm mặt xuống<br><br>Hãy cứ vỗ tay cười tớ theo cách cậu muốn đi<br><br>Leo lên con dốc nơi mặt trời đổ xuống<br><br>Bóng chiều của chúng ta...                                        |
+| 追いつけないまま大人になって<br><br>君のポケットに夜が咲く<br><br>口に出せなくても僕ら一つだ<br><br>それでいいだろ、もう    | oitsukenai mama otona ni natte<br><br>kimi no POKETTO ni yoru ga saku<br><br>kuchi ni dasenakute mo bokura hitotsu da<br><br>sore de ii daro, mou            | Becoming an adult without being able to catch up<br><br>Night blooms in your pocket<br><br>Even if we can’t put it into words, we are one<br><br>That’s enough, I think                               | Không thể đuổi kịp cậu mà đã trưởng thành<br><br>Màn đêm nở rộ trong túi áo cậu<br><br>Dù không thể nói ra, hai ta vẫn là một                                                                                          |
+| 君の想い出を噛み締めてるだけ                                                              | kimi no omoide o kamishimete’ru dake                                                                                                                         | I’m only chewing over memories of you                                                                                                                                                                 | Tớ sẽ chỉ gặm nhấm ký ức về cậu mà thôi<br><br>Chỉ vậy thôi                                                                                                                                                            |
 ##### Notes
 >This line references a haiku by Masaoka Shiki, “絶えず人 いこふ夏野の 石一つ,” which roughly translates to “people are always resting on the single stone in the summer field.” (That’s the whole haiku; they’re short.) Here’s a [blog post](https://hokku.wordpress.com/2013/06/02/shiki-summer-and-a-single-stone/) that discusses the haiku, and some ways of translating it, in more detail. ^1
 #### MV Notes
