--- a/(2021) Creation/02. Spring Thief.md
+++ b/(2021) Creation/02. Spring Thief.md
@@ -1,22 +1,22 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-春泥棒 | Haru Dorobou
+春泥棒 | Haru Dorobou | Kẻ trộm mùa xuân
 #### Lyrics
 
-| Japanese                                                                                                                             | Romanji                                                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                             |
-| ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 高架橋を抜けたら雲の隙間に青が覗いた<br><br>最近どうも暑いからただ風が吹くのを待ってた                                                                                      | Koukakyou o nuketara kumo no sukima ni ao ga nozoita<br><br>Saikin doumo atsui kara tada kaze ga fuku no o matteta                                                                                                                                                  | When I crossed the elevated bridge, I could see the blue sky peeking through the clouds<br><br>It's really hot lately, so I was just waiting for a breeze                                                                                                                                                                                                                                                       |
-| 木陰に座る<br><br>何か頬に付く<br><br>見上げれば頭上に咲いて散る                                                                                             | Kokage ni suwaru<br><br>Nani ka hoo ni tsuku<br><br>Miagereba zujou ni saite chiru                                                                                                                                                                                  | Sitting beneath the shade of a tree,<br><br>There's something stuck on my cheeks<br><br>When I look up, flowers are blooming and falling right above my head                                                                                                                                                                                                                                                    |
-| はらり、僕らもう息も忘れて<br><br>瞬きさえ億劫<br><br>さぁ、今日さえ明日過去に変わる<br><br>ただ風を待つ<br><br>だから僕らもう声も忘れて<br><br>さよならさえ億劫<br><br>ただ花が降るだけ晴れり<br><br>今、春吹雪 | Harari, bokura mou iki mo wasurete<br><br>Mabataki sae okkuu<br><br>Sa~a, kyou sae ashita kako ni kawaru<br><br>Tada kaze o matsu<br><br>Dakara bokura mou koe mo wasurete<br><br>Sayonara sae okkuu<br><br>Tada hana ga furu dake hareri<br><br>Ima, haru fubuki   | Gently falling, we're now forgetting to even breathe<br><br>And it's too much work to even blink<br><br>Well, even today will turn into the past tomorrow<br><br>So I'm just waiting for the wind<br><br>That's why, we're now forgetting even our voices<br><br>And it's too much work to even say goodbye<br><br>Flowers are just falling beneath the sunny sky<br><br>Right now, a spring storm is happening |
-| 次の日も待ち合わせ<br><br>花見の客も少なくなった<br><br>春の匂いはもう止む<br><br>今年も夏が来るのか                                                                       | Tsugi no hi mo machiawase<br><br>Hanami no kyaku mo sukunakunatta<br><br>Haru no nioi wa mou yamu<br><br>Kotoshi mo natsu ga kuru no ka                                                                                                                             | The next day, I met up with you again at the same place<br><br>There weren't that many people who went to see the cherry blossoms anymore<br><br>And I couldn't smell spring in the air anymore<br><br>I guess summer will come again this year                                                                                                                                                                 |
-| 高架橋を抜けたら道の先に君が覗いた<br><br>残りはどれだけかな<br><br>どれだけ春に会えるだろう                                                                               | Koukakyou o nuketara michi no saki ni kimi ga nozoita<br><br>Nokori wa dore dake kana<br><br>Dore dake haru ni aerudarou                                                                                                                                            | When I crossed the elevated bridge, I could see you peeking from the end of the road<br><br>I wonder how much time is left?<br><br>I wonder how many more times can I still meet you in the spring...                                                                                                                                                                                                           |
-| 川沿いの丘、木陰に座る<br><br>また昨日と変わらず今日も咲く花に、                                                                                                 | Kawazoi no oka, kokage ni suwaru<br><br>Mata kinou to kawarazu kyou mo saku hana ni,                                                                                                                                                                                | At the hill by the riverside, we're sitting beneath the shade of a tree<br><br>Again, just like yesterday, beneath the blooming flowers,                                                                                                                                                                                                                                                                        |
-| 僕らもう息も忘れて<br><br>瞬きさえ億劫<br><br>花散らせ今吹くこの嵐は<br><br>まさに春泥棒<br><br>風に今日ももう時が流れて<br><br>立つことさえ億劫<br><br>花の隙間に空、散れり<br><br>まだ、春吹雪         | Bokura mou iki mo wasurete<br><br>Mabataki sae okkuu<br><br>Hana chirase ima fuku kono arashi wa<br><br>Masani haru dorobou<br><br>Kaze ni kyou mo mou toki ga nagarete<br><br>Tatsu koto sae okkuu<br><br>Hana no sukima ni sora, chireri<br><br>Mada, haru fubuki | We're now forgetting to even breathe,<br><br>And it's too much work to even blink<br><br>There's no mistaking it; this storm of flowers scattering about right now<br><br>Is the spring thief<br><br>Today, still, time is being carried away by the wind,<br><br>And it's too much work to even stand up<br><br>The sky can be seen between the falling flowers<br><br>A spring storm is happening, still      |
-| 今日も会いに行く<br><br>木陰に座る<br><br>溜息を吐く<br><br>花ももう終わる<br><br>明日も会いに行く<br><br>春がもう終わる<br><br>名残るように時間が散っていく                               | Kyou mo ai ni iku<br><br>Kokage ni suwaru<br><br>Tameiki o tsuku<br><br>Hana mo mou owaru<br><br>Asu mo ai ni iku<br><br>Haru ga mou owaru<br><br>Na nokoru you ni jikan ga chitteiku                                                                               | Today, I'll go to see you as well<br><br>Then I'll sit beneath the shade of a tree<br><br>And let out a sigh<br><br>The flowers have stopped blooming<br><br>I'll go to see you again tomorrow<br><br>Spring is coming to an end<br><br>Time is fluttering down as if it's leaving behind traces of the days we spent together                                                                                  |
-| 愛を歌えば言葉足らず<br><br>踏む韻さえ億劫<br><br>花開いた今を言葉如きが語れるものか                                                                                   | Ai o utaeba kotobatarazu<br><br>Fumu in sae okkuu<br><br>Hanahiraita ima o kotobagotoki ga katareru mono ka                                                                                                                                                         | There aren't enough words out there to sing of love<br><br>It's too much work to even make them rhyme<br><br>There's no way things like words can convey the blossoming present                                                                                                                                                                                                                                 |
-| はらり、僕らもう声も忘れて<br><br>瞬きさえ億劫<br><br>花見は僕らだけ<br><br>散るなまだ、春吹                                                                           | Harari, bokura mou koe mo wasurete<br><br>Mabataki sae okkuu<br><br>Hanami wa bokura dake<br><br>Chiru na mada, haru fubuki                                                                                                                                         | Gently falling, we're now forgetting even our voices<br><br>And it's too much work to even blink<br><br>Only the two of us are here to watch the cherry blossoms<br><br>And I'm begging for the spring storm to not stop just yet                                                                                                                                                                               |
-| あともう少しだけ<br><br>もう数えられるだけ<br><br>あと花二つだけ<br><br>もう花一つだけ<br><br>ただ葉が残るだけ、はらり<br><br>今、春仕舞い                                            | Ato mou sukoshi dake<br><br>Mou kazoerareru dake<br><br>Ato hana futatsu dake<br><br>Mou hana hitotsu dake<br><br>Tada ha ga nokoru dake, harari<br><br>Ima, haru jimai                                                                                             | Just a little bit left<br><br>I can now count the ones left<br><br>Two flowers left<br><br>Just one more flower left<br><br>Only the leaves are left now, gently falling<br><br>Right now, spring has come to an end                                                                                                                                                                                            |
+| Japanese                                                                                                                             | Romanji                                                                                                                                                                                                                                                             | [Glens / Night Deer Translations](https://docs.google.com/document/d/1la4NJaq-Oi4560246ae6LNJwtEryYIVvNlU8zSr2gvs/)                                                                                                                                                                                                                                                                                             | [pikapika](https://pikapika-translate.blogspot.com/2021/05/sousaku.html)                                                                                                                                                                                                                                                                                                                                                                                     |
+| ------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 高架橋を抜けたら雲の隙間に青が覗いた<br><br>最近どうも暑いからただ風が吹くのを待ってた                                                                                      | Koukakyou o nuketara kumo no sukima ni ao ga nozoita<br><br>Saikin doumo atsui kara tada kaze ga fuku no o matteta                                                                                                                                                  | When I crossed the elevated bridge, I could see the blue sky peeking through the clouds<br><br>It's really hot lately, so I was just waiting for a breeze                                                                                                                                                                                                                                                       | Bước ra khỏi cầu vượt, bầu trời xanh lấp ló qua kẽ mây<br><br>Dạo này trời nóng quá, nên anh mãi chờ một cơn gió                                                                                                                                                                                                                                                                                                                                             |
+| 木陰に座る<br><br>何か頬に付く<br><br>見上げれば頭上に咲いて散る                                                                                             | Kokage ni suwaru<br><br>Nani ka hoo ni tsuku<br><br>Miagereba zujou ni saite chiru                                                                                                                                                                                  | Sitting beneath the shade of a tree,<br><br>There's something stuck on my cheeks<br><br>When I look up, flowers are blooming and falling right above my head                                                                                                                                                                                                                                                    | Anh ngồi dưới tán cây<br><br>Có cái gì đó vương lại trên gò má<br><br>Ngước lên nhìn, hoa đang nở rộ buông lơi                                                                                                                                                                                                                                                                                                                                               |
+| はらり、僕らもう息も忘れて<br><br>瞬きさえ億劫<br><br>さぁ、今日さえ明日過去に変わる<br><br>ただ風を待つ<br><br>だから僕らもう声も忘れて<br><br>さよならさえ億劫<br><br>ただ花が降るだけ晴れり<br><br>今、春吹雪 | Harari, bokura mou iki mo wasurete<br><br>Mabataki sae okkuu<br><br>Sa~a, kyou sae ashita kako ni kawaru<br><br>Tada kaze o matsu<br><br>Dakara bokura mou koe mo wasurete<br><br>Sayonara sae okkuu<br><br>Tada hana ga furu dake hareri<br><br>Ima, haru fubuki   | Gently falling, we're now forgetting to even breathe<br><br>And it's too much work to even blink<br><br>Well, even today will turn into the past tomorrow<br><br>So I'm just waiting for the wind<br><br>That's why, we're now forgetting even our voices<br><br>And it's too much work to even say goodbye<br><br>Flowers are just falling beneath the sunny sky<br><br>Right now, a spring storm is happening | Thật nhẹ nhàng, chúng tay hãy cùng quên đi cả hơi thở của mình<br><br>Đến cả chớp mắt thôi cũng thật phiền phức<br><br>Ngày hôm nay sang ngày mai cũng sẽ trở thành quá khứ<br><br>Anh chỉ đơn giản chờ một làn gió mà thôi<br><br>Vậy nên chúng ta hãy quên đi cả giọng nói của mình<br><br>Cả lời tạm biệt cũng thật mệt mỏi để nói ra<br><br>Chỉ cần thấy hoa rơi thôi tâm hồn này cũng thật khoáng đãng<br><br>Ngay lúc này đất trời đang đón tuyết xuân |
+| 次の日も待ち合わせ<br><br>花見の客も少なくなった<br><br>春の匂いはもう止む<br><br>今年も夏が来るのか                                                                       | Tsugi no hi mo machiawase<br><br>Hanami no kyaku mo sukunakunatta<br><br>Haru no nioi wa mou yamu<br><br>Kotoshi mo natsu ga kuru no ka                                                                                                                             | The next day, I met up with you again at the same place<br><br>There weren't that many people who went to see the cherry blossoms anymore<br><br>And I couldn't smell spring in the air anymore<br><br>I guess summer will come again this year                                                                                                                                                                 | Ngày hôm sau chúng ta lại gặp nhau<br><br>Khách đến ngắm hoa đã vãn bớt<br><br>Hương thơm của mùa xuân đã tan biến<br><br>Năm nay liệu mùa hè có đến không ta?                                                                                                                                                                                                                                                                                               |
+| 高架橋を抜けたら道の先に君が覗いた<br><br>残りはどれだけかな<br><br>どれだけ春に会えるだろう                                                                               | Koukakyou o nuketara michi no saki ni kimi ga nozoita<br><br>Nokori wa dore dake kana<br><br>Dore dake haru ni aerudarou                                                                                                                                            | When I crossed the elevated bridge, I could see you peeking from the end of the road<br><br>I wonder how much time is left?<br><br>I wonder how many more times can I still meet you in the spring...                                                                                                                                                                                                           | Bước khỏi cầu vượt, em đang đứng cuối đường ngó nhìn anh<br><br>Còn lại bao nhiêu đây?<br><br>Còn lại bao nhiều mùa xuân ta có thể gặp nhau đây?                                                                                                                                                                                                                                                                                                             |
+| 川沿いの丘、木陰に座る<br><br>また昨日と変わらず今日も咲く花に、                                                                                                 | Kawazoi no oka, kokage ni suwaru<br><br>Mata kinou to kawarazu kyou mo saku hana ni,                                                                                                                                                                                | At the hill by the riverside, we're sitting beneath the shade of a tree<br><br>Again, just like yesterday, beneath the blooming flowers,                                                                                                                                                                                                                                                                        | Trên ngọn đồi ven sông, anh ngồi dưới tán cây<br><br>Gửi lời đến những bông hoa vẫn nở vào hôm nay                                                                                                                                                                                                                                                                                                                                                           |
+| 僕らもう息も忘れて<br><br>瞬きさえ億劫<br><br>花散らせ今吹くこの嵐は<br><br>まさに春泥棒<br><br>風に今日ももう時が流れて<br><br>立つことさえ億劫<br><br>花の隙間に空、散れり<br><br>まだ、春吹雪         | Bokura mou iki mo wasurete<br><br>Mabataki sae okkuu<br><br>Hana chirase ima fuku kono arashi wa<br><br>Masani haru dorobou<br><br>Kaze ni kyou mo mou toki ga nagarete<br><br>Tatsu koto sae okkuu<br><br>Hana no sukima ni sora, chireri<br><br>Mada, haru fubuki | We're now forgetting to even breathe,<br><br>And it's too much work to even blink<br><br>There's no mistaking it; this storm of flowers scattering about right now<br><br>Is the spring thief<br><br>Today, still, time is being carried away by the wind,<br><br>And it's too much work to even stand up<br><br>The sky can be seen between the falling flowers<br><br>A spring storm is happening, still      | Chúng ta hãy quên đi cả những hơi thở đi<br><br>Đến cả chớp mắt thôi sao cũng quá mệt mỏi<br><br>Cơn cuồng phong giờ đây đang mang theo những cánh hoa bay đi<br><br>Thật chẳng khác nào một kẻ trộm mùa xuân<br><br>Ngày hôm nay, dòng thời gian vẫn trôi đi theo cơn gió<br><br>Chỉ đứng yên thôi cũng thấy rệu rã<br><br>Bầu trời thấp thoáng sau những tán hoa bay phấp phới<br><br>Tuyết xuân vẫn còn lưu lại đây                                       |
+| 今日も会いに行く<br><br>木陰に座る<br><br>溜息を吐く<br><br>花ももう終わる<br><br>明日も会いに行く<br><br>春がもう終わる<br><br>名残るように時間が散っていく                               | Kyou mo ai ni iku<br><br>Kokage ni suwaru<br><br>Tameiki o tsuku<br><br>Hana mo mou owaru<br><br>Asu mo ai ni iku<br><br>Haru ga mou owaru<br><br>Na nokoru you ni jikan ga chitteiku                                                                               | Today, I'll go to see you as well<br><br>Then I'll sit beneath the shade of a tree<br><br>And let out a sigh<br><br>The flowers have stopped blooming<br><br>I'll go to see you again tomorrow<br><br>Spring is coming to an end<br><br>Time is fluttering down as if it's leaving behind traces of the days we spent together                                                                                  | Ngày hôm nay anh vẫn sẽ đi gặp em<br><br>Anh vẫn ngồi dưới tán cây<br><br>Thở ra tiếng dài nặng nhọc<br><br>Hoa sắp tàn rồi<br><br>Ngày mai anh vẫn sẽ đi gặp em<br><br>Mùa xuân sắp qua đi rồi<br><br>Thời gian rơi rụng như lưu lại dư âm                                                                                                                                                                                                                  |
+| 愛を歌えば言葉足らず<br><br>踏む韻さえ億劫<br><br>花開いた今を言葉如きが語れるものか                                                                                   | Ai o utaeba kotobatarazu<br><br>Fumu in sae okkuu<br><br>Hanahiraita ima o kotobagotoki ga katareru mono ka                                                                                                                                                         | There aren't enough words out there to sing of love<br><br>It's too much work to even make them rhyme<br><br>There's no way things like words can convey the blossoming present                                                                                                                                                                                                                                 | Bao nhiêu lời cũng không đủ để hát lên tình yêu trong anh<br><br>Chỉ gieo vần cho lời ca cũng thật phiền phức<br><br>Những thứ như ngôn tờ liệu có thể tả được khung cảnh nở rộ ngay lúc này ư?                                                                                                                                                                                                                                                              |
+| はらり、僕らもう声も忘れて<br><br>瞬きさえ億劫<br><br>花見は僕らだけ<br><br>散るなまだ、春吹                                                                           | Harari, bokura mou koe mo wasurete<br><br>Mabataki sae okkuu<br><br>Hanami wa bokura dake<br><br>Chiru na mada, haru fubuki                                                                                                                                         | Gently falling, we're now forgetting even our voices<br><br>And it's too much work to even blink<br><br>Only the two of us are here to watch the cherry blossoms<br><br>And I'm begging for the spring storm to not stop just yet                                                                                                                                                                               | Thật nhẹ nhàng, chúng ta hãy cùng quên đi cả hơi thở của mình<br><br>Đến cả chớp mắt thôi cũng thật phiền phức<br><br>Khách ngắm hoa giờ chỉ còn mình chúng ta<br><br>Xin tuyết xuân đừng tàn đi!                                                                                                                                                                                                                                                            |
+| あともう少しだけ<br><br>もう数えられるだけ<br><br>あと花二つだけ<br><br>もう花一つだけ<br><br>ただ葉が残るだけ、はらり<br><br>今、春仕舞い                                            | Ato mou sukoshi dake<br><br>Mou kazoerareru dake<br><br>Ato hana futatsu dake<br><br>Mou hana hitotsu dake<br><br>Tada ha ga nokoru dake, harari<br><br>Ima, haru jimai                                                                                             | Just a little bit left<br><br>I can now count the ones left<br><br>Two flowers left<br><br>Just one more flower left<br><br>Only the leaves are left now, gently falling<br><br>Right now, spring has come to an end                                                                                                                                                                                            | Chỉ còn chút nữa thôi<br><br>Những cánh hoa chỉ còn đếm trên đầu ngón tay<br><br>Chỉ còn hai bông hoa<br><br>Còn lại một bông hoa<br><br>Giờ thì chỉ còn lá, rung rinh<br><br>Mùa xuân kết thúc thôi                                                                                                                                                                                                                                                         |
 ##### Notes
 
 #### MV Notes
